--- a/新闻/法国国际广播电台.md
+++ b/新闻/法国国际广播电台.md
@@ -1,4 +1,10 @@
 
+  ## 6/4/2023 - [天安门母亲今往万安公墓祭拜遇难亲人 发六四祭文](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230604-%E5%A4%A9%E5%AE%89%E9%97%A8%E6%AF%8D%E4%BA%B2%E4%BB%8A%E5%BE%80%E4%B8%87%E5%AE%89%E5%85%AC%E5%A2%93%E7%A5%AD%E6%8B%9C%E9%81%87%E9%9A%BE%E4%BA%B2%E4%BA%BA-%E5%8F%91%E5%85%AD%E5%9B%9B%E7%A5%AD%E6%96%87)
+ ```“六四事件”34周年之日，六四罹难者家属团体“天安门母亲”成员今天在当局戒护下，前往北京万安公墓祭拜罹难亲人。她们并发表祭文指出，永不磨灭的记忆和对亲人的思念，将支撑他们坚持不懈地抗争。```0
+  ## 6/4/2023 - [北约敦促土耳其放行“达标”的瑞典入盟 艾尔多安或未松口](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20230604-%E5%8C%97%E7%BA%A6%E6%95%A6%E4%BF%83%E5%9C%9F%E8%80%B3%E5%85%B6%E6%94%BE%E8%A1%8C-%E8%BE%BE%E6%A0%87-%E7%9A%84%E7%91%9E%E5%85%B8%E5%85%A5%E7%9B%9F-%E8%89%BE%E5%B0%94%E5%A4%9A%E5%AE%89%E6%88%96%E6%9C%AA%E6%9D%BE%E5%8F%A3)
+ ```北约秘书长斯托尔滕贝格今天在伊斯坦布尔与土耳其总统埃尔多安举行会谈，长达两小时会议结束时北约负责人说，"瑞典已经履行了它对土耳其的义务"。艾尔多安是否允诺未知。```0
+  ## 6/4/2023 - [法国新浪潮电影大师罗奇尔高寿殒逝](https://www.rfi.fr/cn/%E6%B3%95%E5%9B%BD/20230604-%E6%B3%95%E5%9B%BD%E6%96%B0%E6%B5%AA%E6%BD%AE%E7%94%B5%E5%BD%B1%E5%A4%A7%E5%B8%88%E7%BD%97%E5%A5%87%E5%B0%94%E9%AB%98%E5%AF%BF%E6%AE%92%E9%80%9D)
+ ```雅克-罗齐尔去世，享年96岁，他是一位热爱户外活动和大海的电影人。他仅凭几部电影就成为新浪潮的代表人物，受到同行和评论家的敬佩。但在新浪潮派电影历史中，罗奇尔并没有享有百科全书级待遇，所列大师名单中没有他。```0
   ## 6/4/2023 - [欧洲在华使团无惧禁制纪念“六四”](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230604-%E6%AC%A7%E6%B4%B2%E5%9C%A8%E5%8D%8E%E4%BD%BF%E5%9B%A2%E6%97%A0%E6%83%A7%E7%A6%81%E5%88%B6%E7%BA%AA%E5%BF%B5-%E5%85%AD%E5%9B%9B)
  ```今天是六四事件34周年，中国官方在实体及网络上大力维稳。但德国、英国及欧盟驻中国使团今天透过微博接力声援六四，但不是被删文就是被删留言。其中，德国使馆率先上传一部黑暗中点燃蜡烛又熄灭的短片，令不少中国网友惊呼。```0
   ## 6/4/2023 - [中国神舟15着陆 3宇航员返回地面](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230604-%E4%B8%AD%E5%9B%BD%E7%A5%9E%E8%88%9F15%E7%9D%80%E9%99%86-3%E5%AE%87%E8%88%AA%E5%91%98%E8%BF%94%E5%9B%9E%E5%9C%B0%E9%9D%A2)
@@ -49,13 +55,7 @@
  ```巴黎市政府举行的庆祝夏日来临的白夜活动在锣鼓声中拉开了序幕，来自华人社群的舞狮表演吸引了大量的游客以及巴黎市民，许多巴黎人携家带口来到市政府广场欣赏音乐与歌舞，就在舞狮表演的附近，十多位巴黎华人以及人权组织代表默默地举着白纸，上面写着在狱中的香港支联会组织的代表，以及被关押的中国异议分子的名字。也有人高举着坦克的图片，以及将镇压学生的政权钉在耻辱柱上的丹麦艺术家高志活（JensGalschiøt）制造的国殇之柱的复制图。```0
   ## 6/3/2023 - [拜登签署债务上限法案 避免灾难性违约危机](https://www.rfi.fr/cn/%E7%BE%8E%E6%B4%B2/20230603-%E6%8B%9C%E7%99%BB%E7%AD%BE%E7%BD%B2%E5%80%BA%E5%8A%A1%E4%B8%8A%E9%99%90%E6%B3%95%E6%A1%88-%E9%81%BF%E5%85%8D%E7%81%BE%E9%9A%BE%E6%80%A7%E8%BF%9D%E7%BA%A6%E5%8D%B1%E6%9C%BA)
  ```美国白宫宣布，总统拜登已正式签署提高债务上限的法案。该法案经过数周激烈争论后获得国会通过，也避免了灾难性违约。```0
-  ## 6/3/2023 - [中一名电动自行车企业老板在巴黎南郊被拘](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230603-%E4%B8%AD%E4%B8%80%E5%90%8D%E7%94%B5%E5%8A%A8%E8%87%AA%E8%A1%8C%E8%BD%A6%E4%BC%81%E4%B8%9A%E8%80%81%E6%9D%BF%E5%9C%A8%E5%B7%B4%E9%BB%8E%E5%8D%97%E9%83%8A%E8%A2%AB%E6%8B%98)
- ```法新社转引《巴黎人报》一则消息说，一名43岁的专门从事电动自行车的中国企业家周五被欧洲代表检察官起诉，随后因涉嫌欧洲关税欺诈而被监禁。据知情人士透露，名为李军D(音译LijunD).于2日被金融司法调查局(SEJF)的海关逮捕，然后被警方拘押在塞纳河畔远郊瓦兹河谷省(Val-de-Marne)。```0
   ## 6/3/2023 - [纪念“六四”34周年 美国国会中国委员会发声](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E8%A6%81%E9%97%BB%E5%88%86%E6%9E%90/20230603-%E8%AE%B0%E5%BF%B5-%E5%85%AD%E5%9B%9B-34%E5%91%A8%E5%B9%B4-%E7%BE%8E%E5%9B%BD%E5%9B%BD%E4%BC%9A%E4%B8%AD%E5%9B%BD%E5%A7%94%E5%91%98%E4%BC%9A%E5%8F%91%E5%A3%B0)
  ```今天是1989年六四事件34周年。34年来，六四记念成为海外华人和国际社会的活动，而在中国大陆，六四成为禁忌话题。随着中国政治在极权之路上越走越远，香港也不能再组织公开的六四记念活动。但美国国会暨行政当局中国委员会发声记念六四，并增提彭立发等三人为2023年诺贝尔和平奖的候选人。```0
   ## 6/3/2023 - [六四34周年：海外中国留学生接着点燃蜡烛](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E7%89%B9%E5%88%AB%E8%8A%82%E7%9B%AE/20230603-%E5%85%AD%E5%9B%9B34%E5%91%A8%E5%B9%B4-%E6%B5%B7%E5%A4%96%E4%B8%AD%E5%9B%BD%E7%95%99%E5%AD%A6%E7%94%9F%E6%8E%A5%E7%9D%80%E7%82%B9%E7%87%83%E8%9C%A1%E7%83%9B)
  ```2023年六月四日是六四天安门事件34周年的纪念日，三十四年了，在天安门惨遭屠杀的受害者究竟是多少依然是一个未知数！死难者家属天安门母亲组织的成员们也一个接一个地追随他们的死去的亲人们遗憾地离开了人世，随着北京政权的日益强硬专横，他们的亲人获得平反昭雪的这一天似乎越来越遥遥无期。不过，虽然中国官方竭尽努力试图将事件从历史上抹去，虽然中国国内的新一代人绝大多数都不知道六四意味着什么，在海外的华人却继续年复一年地举行纪念仪式。最近几年来，一些在海外的中国年轻人，虽然并没有亲身经历六四，但也逐渐加入了纪念六四的队伍，他们甚至勇敢地面对遭受北京政府打压的风险公开地站出来组织自己的纪念活动，生活在巴黎的年轻的艺术工作者蒋不就是其中之一，他向法广介绍了他为何要纪念六四。```0
-  ## 6/3/2023 - [荷兰防长称崔天凯的乌战是欧洲安全架构失败的结论“非常非常错误”](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230603-%E8%8D%B7%E5%85%B0%E9%98%B2%E9%95%BF%E7%A7%B0%E5%B4%94%E5%A4%A9%E5%87%AF%E7%9A%84%E4%B9%8C%E6%88%98%E6%98%AF%E6%AC%A7%E6%B4%B2%E5%AE%89%E5%85%A8%E6%9E%B6%E6%9E%84%E5%A4%B1%E8%B4%A5%E7%9A%84%E7%BB%93%E8%AE%BA-%E9%9D%9E%E5%B8%B8%E9%9D%9E%E5%B8%B8%E9%94%99%E8%AF%AF)
- ```中国一位经验丰富的外交官崔天凯在新加坡香格里拉安全与防卫论坛会议上将俄罗斯对乌克兰的侵略战争归因于欧洲安全架构的失败。 荷兰国防部长KajsaOllongren对中国的这种解释提出质疑。因崔天凯是退休外交官，荷兰防长称等候听中国防长的正式官方立场表述。```0
-  ## 6/3/2023 - [方济各将访蒙古 称遥望北京](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20230603-%E6%96%B9%E6%B5%8E%E5%90%84%E5%B0%86%E8%AE%BF%E8%92%99%E5%8F%A4-%E7%A7%B0%E9%81%A5%E6%9C%9B%E5%8C%97%E4%BA%AC)
- ```教皇弗朗西斯将于8月31日至9月4日作访问蒙古之行，这是他去过的最偏远的国度之一，那里只有大约1,300名天主教徒，但由于靠近中国，路透社说蒙古对罗马天主教具有重要的战略意义。```0
