--- a/新闻/德国之声.md
+++ b/新闻/德国之声.md
@@ -1,4 +1,6 @@
 
+  ## 6/4/2023 - [六四34周年：「天安门母亲」重申三项诉求](https://www.dw.com/zh/六四34周年：「天安门母亲」重申三项诉求/a-65820830?maca=chi-rss-chi-all-1127-rdf)
+ ```六四34周年前夕，遇难者家属组成的「天安门母亲」组织发布祭文，重申对六四屠杀「真相、赔偿、究责」的三项诉求。与此同时，德国驻华大使馆周日凌晨在微博发帖悼念六四遭删除。```0
   ## 6/4/2023 - [美国国务院高级官员抵京访问](https://www.dw.com/zh/美国国务院高级官员抵京访问/a-65820554?maca=chi-rss-chi-all-1127-rdf)
  ```美国国务院负责东亚事务的助理国务卿周日抵达北京，并将于接下来一周举行会晤。美中关系紧张之际，华盛顿寻求加强与中国的沟通。```0
   ## 6/4/2023 - [墙外文摘：香港“六四”——个人记忆不灭，集体记忆堪忧](https://www.dw.com/zh/墙外文摘：香港-六四-个人记忆不灭，集体记忆堪忧/a-65820012?maca=chi-rss-chi-all-1127-rdf)
@@ -13,14 +15,14 @@
  ```要了解全球变暖的经济代价，只需看看巴拿马运河的状况。由于中美洲降雨减少，运河水位下降。专家担心普通消费者最终可能会为此付出代价。```0
   ## 6/4/2023 - [两座纳粹“跨步马”雕塑展出引发争议](https://www.dw.com/zh/两座纳粹-跨步马-雕塑展出引发争议/a-65771488?maca=chi-rss-chi-all-1127-rdf)
  ```希特勒政府委托艺术家们制作了数千件艺术品，用来宣传纳粹政权的力量。其中包括两座“跨步马”青铜雕像，而它们现在将在柏林的博物馆展出，引发了舆论争议。```0
-  ## 6/4/2023 - [股市滑坡 百万富翁人数减少](https://www.dw.com/zh/股市滑坡-百万富翁人数减少/a-65803536?maca=chi-rss-chi-all-1127-rdf)
- ```去年全球低迷的股市，也令很多富豪的财富大幅缩水。百万富翁俱乐部的人数明显低于往年。```0
   ## 6/4/2023 - [谁在为全球反塑料污染公约制造障碍？](https://www.dw.com/zh/谁在为全球反塑料污染公约制造障碍？/a-65782004?maca=chi-rss-chi-all-1127-rdf)
  ```来自175个国家的代表聚集在巴黎联合国教科文组织总部密集谈判，期望达成一项应对塑料污染的全球条约。应该聚焦原生塑料还是再生塑料？环保组织担心谈判的方向走偏了。```0
-  ## 6/4/2023 - [日本出台新政策：每年投入3.5万亿日元“催生”](https://www.dw.com/zh/日本出台新政策：每年投入3-5万亿日元-催生/a-65807886?maca=chi-rss-chi-all-1127-rdf)
- ```日本政府宣布每年投入约3.5万亿日元“催生”。出生率下降趋势已对社会诸多方面造成严重影响。```0
+  ## 6/4/2023 - [股市滑坡 百万富翁人数减少](https://www.dw.com/zh/股市滑坡-百万富翁人数减少/a-65803536?maca=chi-rss-chi-all-1127-rdf)
+ ```去年全球低迷的股市，也令很多富豪的财富大幅缩水。百万富翁俱乐部的人数明显低于往年。```0
   ## 6/4/2023 - [基因技术 - 粮食生产的持久发展之路](https://www.dw.com/zh/基因技术-粮食生产的持久发展之路/a-65808887?maca=chi-rss-chi-all-1127-rdf)
  ```围绕转基因食品，有着各种各样令人不安的传言。但事实上，随着转基因技术的不断提升，越来越多的专家都认为，持久性的粮食生产获得了重要和安全的方法。```0
+  ## 6/4/2023 - [日本出台新政策：每年投入3.5万亿日元“催生”](https://www.dw.com/zh/日本出台新政策：每年投入3-5万亿日元-催生/a-65807886?maca=chi-rss-chi-all-1127-rdf)
+ ```日本政府宣布每年投入约3.5万亿日元“催生”。出生率下降趋势已对社会诸多方面造成严重影响。```0
   ## 6/4/2023 - [无人机袭击俄罗斯的背后究竟是怎么回事？](https://www.dw.com/zh/无人机袭击俄罗斯的背后究竟是怎么回事？/a-65803958?maca=chi-rss-chi-all-1127-rdf)
  ```俄罗斯对乌克兰的战争中出现新的形势：在俄罗斯领土上更经常地出现军事袭击。这背后是怎么一回事，西方又如何反应？```0
   ## 6/4/2023 - [六四週年之際 王丹陷性騷風暴](https://www.dw.com/zh/六四週年之際-王丹陷性騷風暴/a-65818250?maca=chi-rss-chi-all-1127-rdf)
@@ -39,8 +41,6 @@
  ```香港六四紀念劇《5月35日》無法在港公演，今年首度移師台灣——這對香港人與台灣人來說有什麼意義？香港逐漸被「清洗」的六四記憶，能在台灣移植、落地嗎？DW採訪幕後團隊與學者理解他們的答案。```0
   ## 6/3/2023 - [美国中央情报局长秘密访问中国](https://www.dw.com/zh/美国中央情报局长秘密访问中国/a-65815540?maca=chi-rss-chi-all-1127-rdf)
  ```一位不愿透露姓名的美国官员表示，中央情报局局长伯恩斯上个月秘密访问中国。这位情报官员进行过多次敏感的访问，包括在2021年底访问俄罗斯，讨论莫斯科准备入侵乌克兰的迹象。```0
-  ## 6/3/2023 - [“六四”临近 香港人如何悄悄纪念？](https://www.dw.com/zh/六四-临近-香港人如何悄悄纪念？/a-65815259?maca=chi-rss-chi-all-1127-rdf)
- ```几十年来，香港一直是中华人民共和国境内唯一一个举行大规模纪念六四活动的地方。不过，2020年香港国安法出台后，这一传统就宣告中断。香港人正通过其他方式，努力保持对六四的记忆。纪念活动的主场则悄然移向海外。```0
   ## 6/3/2023 - [禽流感威胁哺乳动物 专家吁为家禽接种疫苗](https://www.dw.com/zh/禽流感威胁哺乳动物-专家吁为家禽接种疫苗/a-65815230?maca=chi-rss-chi-all-1127-rdf)
  ```研究显示，禽流感病毒正在迅速变化。尽管目前对人类的威胁仍然很低，但专家指出：哺乳动物感染禽流感的病例激增是个令人担忧现象。包含中国、越南等国家开始为家禽接种疫苗，以降低可能对人类造成的风险。```0
   ## 6/3/2023 - [印度三列火车相撞，至少280人遇难](https://www.dw.com/zh/印度三列火车相撞，至少280人遇难/a-65815142?maca=chi-rss-chi-all-1127-rdf)
