--- a/新闻/法国国际广播电台.md
+++ b/新闻/法国国际广播电台.md
@@ -1,4 +1,8 @@
 
+  ## 6/4/2023 - [中国狠学者传与美国赌狠：中国宁可以200城市被炸为废墟也要解放台湾 问美国敢吗？](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230604-%E4%B8%AD%E5%9B%BD%E7%8B%A0%E5%AD%A6%E8%80%85%E4%BC%A0%E4%B8%8E%E7%BE%8E%E5%9B%BD%E8%B5%8C%E7%8B%A0-%E4%B8%AD%E5%9B%BD%E5%AE%81%E5%8F%AF%E4%BB%A5200%E5%9F%8E%E5%B8%82%E8%A2%AB%E7%82%B8%E4%B8%BA%E5%BA%9F%E5%A2%9F%E4%B9%9F%E8%A6%81%E8%A7%A3%E6%94%BE%E5%8F%B0%E6%B9%BE-%E9%97%AE%E7%BE%8E%E5%9B%BD%E6%95%A2%E5%90%97)
+ ```中共战狼学者房兵针对武统台湾曾放狠话恫吓称，就算因此以致中国200座城市成废墟也在所不惜，并挑衅称美国敢吗？```0
+  ## 6/4/2023 - [印度结束火车车难救援 要寻求知道车祸原因](https://www.rfi.fr/cn/%E4%BA%9A%E6%B4%B2/20230604-%E5%8D%B0%E5%BA%A6%E7%BB%93%E6%9D%9F%E7%81%AB%E8%BD%A6%E8%BD%A6%E9%9A%BE%E6%95%91%E6%8F%B4-%E8%A6%81%E5%AF%BB%E6%B1%82%E7%9F%A5%E9%81%93%E8%BD%A6%E7%A5%B8%E5%8E%9F%E5%9B%A0)
+ ```印度救援人员周日在该国发生的20多年来最致命的铁路事故后完成了救援行动。印度调查车难原因。路透社说，铁路信号故障可能是造成至少275人死亡的事故的原因。```0
   ## 6/4/2023 - [天安门母亲今往万安公墓祭拜遇难亲人 发六四祭文](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230604-%E5%A4%A9%E5%AE%89%E9%97%A8%E6%AF%8D%E4%BA%B2%E4%BB%8A%E5%BE%80%E4%B8%87%E5%AE%89%E5%85%AC%E5%A2%93%E7%A5%AD%E6%8B%9C%E9%81%87%E9%9A%BE%E4%BA%B2%E4%BA%BA-%E5%8F%91%E5%85%AD%E5%9B%9B%E7%A5%AD%E6%96%87)
  ```“六四事件”34周年之日，六四罹难者家属团体“天安门母亲”成员今天在当局戒护下，前往北京万安公墓祭拜罹难亲人。她们并发表祭文指出，永不磨灭的记忆和对亲人的思念，将支撑他们坚持不懈地抗争。```0
   ## 6/4/2023 - [北约敦促土耳其放行“达标”的瑞典入盟 艾尔多安或未松口](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20230604-%E5%8C%97%E7%BA%A6%E6%95%A6%E4%BF%83%E5%9C%9F%E8%80%B3%E5%85%B6%E6%94%BE%E8%A1%8C-%E8%BE%BE%E6%A0%87-%E7%9A%84%E7%91%9E%E5%85%B8%E5%85%A5%E7%9B%9F-%E8%89%BE%E5%B0%94%E5%A4%9A%E5%AE%89%E6%88%96%E6%9C%AA%E6%9D%BE%E5%8F%A3)
@@ -49,12 +53,8 @@
  ```天安门事件34周年前，曾参加1989年天安门广场抗议活动的中国异议人士在纽约，为全球唯一的六四纪念馆揭幕，旨在纪念“中国人的民主梦想”。其中当年抗议活动的学生领导人、记念馆创始人王丹表示，“纪念馆的意义不只在于记忆，也是为了当下与未来”。```0
   ## 6/3/2023 - [香港舞台剧《5月35日》台北上演](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230603-%E9%A6%99%E6%B8%AF%E8%88%9E%E5%8F%B0%E5%89%A7-5%E6%9C%8835%E6%97%A5-%E5%8F%B0%E5%8C%97%E4%B8%8A%E6%BC%94)
  ```六四事件34周年前夕，一部以天安门母亲为主角的香港舞台剧《5月35日》自6月2日起一连在台北演出6场。台湾主演剧团创办人钟伯渊说，该剧反映的是中共如何在这34年来抹灭和洗白有关六四的记忆。他希望透过这出在中国和香港都禁演的舞台剧，来缅怀六四精神，更让观众认清，中共政权对人权的威胁不分对象，无所不在。```0
-  ## 6/3/2023 - [克里姆林宫禁止西方记者采访圣彼得堡论坛](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20230603-%E5%85%8B%E9%87%8C%E5%A7%86%E6%9E%97%E5%AE%AB%E7%A6%81%E6%AD%A2%E8%A5%BF%E6%96%B9%E8%AE%B0%E8%80%85%E9%87%87%E8%AE%BF%E5%9C%A3%E5%BD%BC%E5%BE%97%E5%A0%A1%E8%AE%BA%E5%9D%9B)
- ```路透社3日报道，俄罗斯克里姆林宫当天表示，来自“不友好国家”的记者将不被允许参加今年的圣彼得堡国际经济论坛。峰会被是俄国总统普京向国际投资者展示俄罗斯经济的好机会，但乌克兰战争给这次峰会蒙上了阴影。此前，西方记者从未如此全面地被禁止进入该论坛。```0
   ## 6/3/2023 - [巴黎白夜庆祝会上的六四纪念活动](https://www.rfi.fr/cn/%E4%BA%BA%E6%9D%83/20230603-%E5%B7%B4%E9%BB%8E%E7%99%BD%E5%A4%9C%E5%BA%86%E7%A5%9D%E4%BC%9A%E4%B8%8A%E7%9A%84%E5%85%AD%E5%9B%9B%E7%BA%AA%E5%BF%B5%E6%B4%BB%E5%8A%A8)
  ```巴黎市政府举行的庆祝夏日来临的白夜活动在锣鼓声中拉开了序幕，来自华人社群的舞狮表演吸引了大量的游客以及巴黎市民，许多巴黎人携家带口来到市政府广场欣赏音乐与歌舞，就在舞狮表演的附近，十多位巴黎华人以及人权组织代表默默地举着白纸，上面写着在狱中的香港支联会组织的代表，以及被关押的中国异议分子的名字。也有人高举着坦克的图片，以及将镇压学生的政权钉在耻辱柱上的丹麦艺术家高志活（JensGalschiøt）制造的国殇之柱的复制图。```0
-  ## 6/3/2023 - [拜登签署债务上限法案 避免灾难性违约危机](https://www.rfi.fr/cn/%E7%BE%8E%E6%B4%B2/20230603-%E6%8B%9C%E7%99%BB%E7%AD%BE%E7%BD%B2%E5%80%BA%E5%8A%A1%E4%B8%8A%E9%99%90%E6%B3%95%E6%A1%88-%E9%81%BF%E5%85%8D%E7%81%BE%E9%9A%BE%E6%80%A7%E8%BF%9D%E7%BA%A6%E5%8D%B1%E6%9C%BA)
- ```美国白宫宣布，总统拜登已正式签署提高债务上限的法案。该法案经过数周激烈争论后获得国会通过，也避免了灾难性违约。```0
   ## 6/3/2023 - [纪念“六四”34周年 美国国会中国委员会发声](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E8%A6%81%E9%97%BB%E5%88%86%E6%9E%90/20230603-%E8%AE%B0%E5%BF%B5-%E5%85%AD%E5%9B%9B-34%E5%91%A8%E5%B9%B4-%E7%BE%8E%E5%9B%BD%E5%9B%BD%E4%BC%9A%E4%B8%AD%E5%9B%BD%E5%A7%94%E5%91%98%E4%BC%9A%E5%8F%91%E5%A3%B0)
  ```今天是1989年六四事件34周年。34年来，六四记念成为海外华人和国际社会的活动，而在中国大陆，六四成为禁忌话题。随着中国政治在极权之路上越走越远，香港也不能再组织公开的六四记念活动。但美国国会暨行政当局中国委员会发声记念六四，并增提彭立发等三人为2023年诺贝尔和平奖的候选人。```0
   ## 6/3/2023 - [六四34周年：海外中国留学生接着点燃蜡烛](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E7%89%B9%E5%88%AB%E8%8A%82%E7%9B%AE/20230603-%E5%85%AD%E5%9B%9B34%E5%91%A8%E5%B9%B4-%E6%B5%B7%E5%A4%96%E4%B8%AD%E5%9B%BD%E7%95%99%E5%AD%A6%E7%94%9F%E6%8E%A5%E7%9D%80%E7%82%B9%E7%87%83%E8%9C%A1%E7%83%9B)
