--- a/新闻/自由亚洲电台亚太.md
+++ b/新闻/自由亚洲电台亚太.md
@@ -1,8 +1,8 @@
 
   ## 6/4/2023 - [台湾政坛掀起#metoo 蓝绿政治人物、王丹都遭指控性骚](https://www.rfa.org/mandarin/yataibaodao/renquanfazhi/hcm-06042023050321.html)
  ```台湾一名李姓网友在六四这天，于台北出面控诉89民运领袖王丹性骚扰，并要求王丹在台北时间6日午夜之前道歉否则将提告。王丹回应表示欢迎提告，支持以法律寻找真相。台湾近期从一名民进党前党工称遭性骚扰，在党内却无法获得正义开起，掀起一连串“#metoo”挺身揭发政坛性骚扰经历，蓝绿都有人被点名。李姓网友称，他是受到启发，才会在事发9年后挺身而出。李姓网友两天前先在个人脸书发文指控，9年前应王丹之邀前往美国，遭到王丹性骚。4日上午他在台北市议员林亮君陪同下，以公开露脸方式重述当时的经过。李姓网友称，2014年6月6日晚间，在纽约某饭店，遭王丹强吻，并“强暴未遂”。他说，接下来的几天中，王丹不时对他言语骚扰、有意无意暗示试图发生关系，因为在美国举目无亲，语言又不通，一周多的时间他担心受怕，最后提前返台。控诉网友拿对话截图为证对于有部分网友质疑，李姓网友提出他与王丹的对话截图指出，王丹在2014年5月30号台湾时间下午4点47分传讯息“在纽约等你”，称这是一个明确的邀约。他也公布几张王丹私人住所照片，与王丹直播比对，像是挂画、台灯等位置都完全吻合，证明他确实去过。由于前一天王丹以“没有性骚扰”以及“记忆落差”回应相关指控，李姓网友对王丹喊话称他手上有录音等相关证据，要求王丹道歉否则提告。“如果6月6号之前，没有在社群为过去行为，所欺负过或骚扰、甚至侵害过的人道歉，我会带着证据向检方提告。”“欢迎提告，支持用法律的方式寻找事情的真相。”王丹针对对方指控作上述回覆。六四前出面揭发动机为何？李姓网友揭发所谓的性骚内幕，时间正巧与六四纪念馆揭幕同一日。李姓网友主动说明，六四是世界民主非常重要的日子，但也是一个“污点”。他说，王丹当年曾站在坦克面前，为对抗中共强权打压人权发声。但现在他面对王丹，“就像那个站在坦克车面前的人”。“我很害怕，我觉得如果我一不小心，就可能会被你这台坦克打死，你比我有太多的权势。你有太多的光环，你的手甚至可以伸到政治或是学术圈。”李姓网友说道。李姓网友一度曾对两位前台北市议员投诉，但是，他说9年前当时身心状况不稳定，又担心被抹黑成“中国派来的打手”，所以作罢。如今受到近期好几位政治工作者揭发在职场遭受性骚以及不当对待的启发，给了他勇气站出来。连日遭指控王丹不愿揣测动机尊重网友判断除了李姓网友外，一名文字工作者也发文称，过去在台湾清华大学求学期间，也遭到王丹性骚扰。王丹3日推文回应，“为什么短短几天突然涌现这么多指控，我无意揣测。相信大家有自己的判断”。他说，不会一一回应，那会耗费大量精力和时间。他把判断交给网友。不管相信还是不相信，他都尊重。他也感谢选择相信他的朋友。王丹强调，不会因为这些风风雨雨，停止正在推动的工作，包括六四纪念馆，智库“对话中国”，针对中共大外宣的反认知作战，对未来中国转型方案的探讨，为国内异议人士出版著作等。“不仅不会停止，还会更加努力。”台湾政坛掀起#metoo风潮5月31日，一名民进党的前党工，以具名方式在脸书发了一封，“为时已晚但也该被好好接住的求救信”，揭发遭到一名与民进党友好的导演“辉哥”性骚扰，当她向当时民进党妇女部主任许嘉恬求助时，她却转身离开，遭到二度伤害。她引用近期政治夯剧《人选之人-造浪者》一句知名的台词，“我们不要就这样算了，好不好？很多事情不能就这样算了，如果这样的话，人就会慢慢地死掉，会死掉。”这篇贴文在台湾政坛炸锅，除了许嘉恬去职外，当时的民进党副秘书长林飞帆还为“忽略当事人不走申诉管道的背后原因”疏忽致歉。紧接着另名女党工指控遭到男同事性骚扰，向时任青年部主任蔡沐霖反映，还以影响部门气氛为由逼她道歉，此事还惊动高层。对于党内性骚连环爆，民进党现任主席赖清德多次向受害者和台湾社会道歉，他感谢受害者勇敢站出来，强调面对职场霸凌及性平事件，绝对不必要“大局为重”，人身安全及权利才是最重要的。民进党前主席、台湾总统蔡英文也在脸书发文，这两天，接连有受害者揭露，曾经在民进党遭受的性骚扰事件，得知他们的受害经历，感到很不舍和痛心。“身为前任党主席，责无旁贷。要向受害的朋友和社会大众，表达最深的歉意。”无独有偶，蓝营也有政治人物被点名卷入性骚事件，镜文学总经理董成瑜在脸书揭露，一名蓝营时任县长、现为立委的政治人物曾在餐叙上未经其同意抓她的手，甚至还突然站起来“抱住她的头亲她”。外界依照其描述推测为国民党立委傅崐萁，傅崐萁还发声明称，“若有任何性骚扰情事，请依法提出告诉”！国民党征召的总统参选人侯友宜发声明，呼吁党中央“绝不能轻忽此事”。台湾政坛的#metoo运动，在短短不到一周时间已经陆续传出逾十件，还有多少未爆弹，蓝绿都不敢轻忽。自由亚洲电台记者黄春梅台北报道责编陈美华许书婷```0
-  ## 6/4/2023 - [天安门母亲：“永远不会忘记那个黑暗的夜晚”  网民发起六四静思节绝食一天](https://www.rfa.org/mandarin/yataibaodao/renquanfazhi/gt-06042023041129.html)
- ```八九“六四”34周年日，北京“天安门母亲”群体的多名成员在公安的监视下，到北京万安公墓纪念逝者。天安门母亲群体表示，作为亡者的亲属，他们永远不会忘记那个黑暗的夜晚。有网民发起六四静思节绝食一天的活动。周六晚，中国境内的微信、QQ等社交账号被禁止更换头像。本周日是北京六四34周年纪念日。当天天安门广场和周边戒备森严，军警和便衣三步一岗，禁止路人聚集、停留。警察还检查路人的身份证。上午，一位经过天安门广场的外省人李先生告诉本台：“我在北京，天安门周边全都是人脸识别的摄像头，你路过，就有警察在喊，前面的人拦截下来，要查身份证、登记，便衣特别多。只要你犯一点事就直接刑事拘留。”在微信、QQ等聊天工具上，今年的六四周年日未见到有人纪念六四死难者的白菊花、蜡烛。对此，李先生说：“往年纪念日都有，今年打压特别狠，现在你露头就抓。现在你要是在网上发表，就判你三年刑期。”六四事件已经过去了34年，但它仍然是中国历史上最具争议性和敏感性的事件之一。六四静思节网民自发绝食一天湖南网民田先生告诉本台，周六晚，国内网民的微信、QQ被禁止更换头像，当天仍有人以“六四静思节”绝食一天：“可能没有以往的纪念热度，但还是有的。今天是唐荆陵倡导的静思节，我们群里的人绝食一天，以示抗议。大部分人会记住这一天的。腾讯QQ、微信从昨天晚上起，不让你修改头像。”当天上午，北京“天安门母亲”群体发言人尤维洁、成员黄金平、袁刃、郝建、段昌琪等人，在北京警方的“护送”下，前往万安公墓祭奠他们在六四事件中失去的亲人。86岁高龄的张先玲近期因身体不适，未能到场。六四难属：永不会忘记那个黑暗的夜晚现场视频中，6位难属身穿黑色衣服，向逝者鞠躬默哀。六四遇难者杨燕声的妻子黄金平在致辞中说：“六四34周年过去了，在这个刻骨铭心的日子，我们都聚集在西郊的万安公墓祭奠我们在1989年6月4日惨遭屠杀遇难的亲人。。。。。”祭文写道：三十四年前的今天，当时的政府动用野战军使用机枪、坦克和装甲车，在首都长安街以及其他重要街道上，无视马路上众多的民众，横行霸道、真枪实弹地向人群开枪，用坦克碾压，残暴地镇压了学生和市民们。我们的亲人，他们就是在那个血腥的夜晚倒在罪恶的枪弹下，为了心中的理想献出了宝贵的生命。还称，作为亡者的亲属，我们永远不会忘记那个黑暗的夜晚，永远记得。1989年春天，北京天安门广场发生了大规模抗议活动，数以万计的学生和市民聚集在广场上要求政治改革和反对腐败。然而，在当局的镇压下，这次运动以悲惨结局告终。天安门母亲群体成员电话通讯被屏蔽本台当天致电天安门母亲代表尤维洁、张先玲等人，但始终无法接通。记者多次致电张先玲家的座机，但记者能听到对方说话，对方听不到记者到声音。张先玲的家人在电话中说：“喂。。。，境外的电话就别打了，现在是在监控状态，您的境外电话被掐断了，听不到您的声音。”此次活动引起了海内外媒体和民众关注。许多人认为，“天安门母亲”的坚强与勇气令人感动，并呼吁中国政府应该正视历史、追求真相，并给那些无辜死难者一个交代。6月4日，在全球各地都有人纪念这个重要时刻，美国、台湾及香港等地，有民间组织集会或个人通过绝食一天的活动，表达对那些失去生命或被捕入狱者的怀念，并呼吁中国政府重新审视此事。记者古亭责编陈美华许书婷```0
+  ## 6/4/2023 - [天安门母亲：“永远不会忘记那个黑暗的夜晚”](https://www.rfa.org/mandarin/yataibaodao/renquanfazhi/gt-06042023041129.html)
+ ```八九“六四”34周年这天，六四死难者家属群体“天安门母亲”的多名成员在公安的监视下，到北京万安公墓纪念逝者。天安门母亲群体表示，作为亡者的亲属，他们永远不会忘记那个黑暗的夜晚。在这一天，有网民发起六四静思节绝食一天的活动。周六晚，中国境内的微信、QQ等社交账号被禁止更换头像。六月四日这天，天安门广场和周边戒备森严，军警和便衣三步一岗，禁止路人聚集、停留。警察还检查路人的身份证。上午，一位经过天安门广场的外省人李先生告诉本台：“我在北京，天安门周边全都是人脸识别的摄像头，你路过，就有警察在喊，前面的人拦截下来，要查身份证、登记，便衣特别多。只要你犯一点事就直接刑事拘留。”在北京警方高度戒备下，6名六四难属身穿黑色衣服纪念六四期间被杀害的亲人。（万安公墓六四难属提供）在微信、QQ等聊天工具上，今年的六四周年日未见到有人纪念六四死难者的白菊花、蜡烛。对此，李先生说：“往年纪念日都有，今年打压特别狠，现在你露头就抓。”六四事件已经过去了34年，但它仍然是中国历史上最具争议性和敏感性的事件之一。 六四静思节网民自发绝食一天湖南网民田先生告诉本台，周六晚，国内网民的微信、QQ被禁止更换头像，当天仍有人以“六四静思节”绝食一天：“可能没有以往的纪念热度，但还是有的。今天是（人权律师）唐荆陵倡导的静思节，我们群里的人绝食一天，以示抗议。大部分人会记住这一天的。腾讯QQ、微信从昨天晚上起，不让你修改头像。”当天上午，北京“天安门母亲”群体发言人尤维洁、成员黄金平、袁刃、郝建、段昌琪等人，在北京警方的“护送”下，前往万安公墓祭奠他们在六四事件中失去的亲人。86岁高龄的张先玲近期因身体不适，未能到场。 6月4日凌晨，中国境内网民无法更换微信、QQ聊天工具的头像。（万安公墓六四难属提供）六四难属：永不会忘记那个黑暗的夜晚现场视频中，6位难属身穿黑色衣服，向逝者鞠躬默哀。六四遇难者杨燕声的妻子黄金平在致辞中说：“六四34周年过去了，在这个刻骨铭心的日子，我们都聚集在西郊的万安公墓祭奠我们在1989年6月4日惨遭屠杀遇难的亲人。。。。。”“天安门母亲”群体发表的祭文写道：三十四年前的今天，当时的政府动用野战军使用机枪、坦克和装甲车，在首都长安街以及其他重要街道上，无视马路上众多的民众，横行霸道、真枪实弹地向人群开枪，用坦克碾压，残暴地镇压了学生和市民们。我们的亲人，他们就是在那个血腥的夜晚倒在罪恶的枪弹下，为了心中的理想献出了宝贵的生命。还称，作为亡者的亲属，我们永远不会忘记那个黑暗的夜晚，永远记得。1989年春天，北京天安门广场发生了大规模抗议活动，数以万计的学生和市民聚集在广场上要求政治改革和反对腐败。然而，在当局的镇压下，这次运动以悲惨结局告终。六四34周年日当天，许多中国网民发起六四静思节活动，绝食一天。（万安公墓六四难属提供）天安门母亲群体成员电话通讯被屏蔽本台当天致电天安门母亲代表尤维洁、张先玲等人，但始终无法接通。记者多次致电张先玲家的座机，但记者能听到对方说话，对方听不到记者到声音。张先玲的家人在电话中说：“喂。。。，境外的电话就别打了，现在是在监控状态，您的境外电话被掐断了，听不到您的声音。”此次活动引起了海内外媒体和民众关注。许多人认为，“天安门母亲”的坚强与勇气令人感动，并呼吁中国政府应该正视历史、追求真相，并给那些无辜死难者一个交代。6月4日，在全球各地都有人纪念这个重要时刻，美国、台湾及香港等地，有民间组织集会或个人通过绝食一天的活动，表达对那些失去生命或被捕入狱者的怀念，并呼吁中国政府重新审视此事。 记者：古亭   责编：陈美华许书婷 申铧   网编：杰西```0
   ## 6/3/2023 - [中国大使馆前“六四大屠杀34周年纪念会” 年轻人为主](https://www.rfa.org/mandarin/yataibaodao/renquanfazhi/wy2-06032023190759.html)
  ```由全美中国学生学者自治联合会主办的“六四大屠杀34周年纪念会”，6月3日下午2点在中国驻美大使馆门前的广场举行。多位当年天安门民主运动的学生领袖及各界民主人士超过百人到现场参与集会，其中尤以年轻人为主。 不受雷雨阻挡年轻世代参与纽约六四游行民主女神像前华盛顿举办六四烛光悼念活动纽约六四纪念馆开幕六四领袖重申追求自由中国决心六四34周年特别报导：接过广场上话筒的女青年 这是一场坚持了三十四年的集会。主办者依然是全美学自联。 【中国驻美大使馆前的六四纪念会】六四屠杀34周年，悼念和纪念活动在这里也举行了34次。这次以新一代的年轻人为主。pic.twitter.com/mkm0YfX15X—自由亚洲电台(@RFA_Chinese)June4,2023 今年的纪念会依然是在华盛顿中国驻美大使馆前，但已经从使馆对面的街心花园挪到了紧靠花园的马路边上，地界更为开阔；参会人员在马路和人行道上铺开，显得更有气势。由于去年底发生了席卷全国多个城市、以青年人为主的白纸运动，今年的六四大屠杀纪念会尤其强调了年轻人在民主运动中的作用。多位当年天安门民主运动的学生领袖及各界民主人士超过百人到现场参与集会(记者王允拍摄)全美学自联理事、佐治亚大学博士生古懿在开幕词中引用了从美国哥伦比亚大学传出的诗句，“我们是广场上的遗孤，我们是野火后的新芽，”“我们在方舱里自救，我们在铁链下自由，”“我们曾经站在坦克前，我们也曾经站在四通桥上，我们今天依旧站在这里，我们明天还要站到你们面前。”中国民主运动海外联席会议主席魏京生也在发言中为新生代民主力量的崛起而感到欣慰，他说，“现在的年轻人有没出息的，但也有有出息的，就像今天来的年轻人，都是有出息的。”这句话引来众人热烈的掌声。中国民主运动海外联席会议主席魏京生（中）集会现场讲话（记者王允拍摄）这次参会的有不少是从纽约等美国各地赶来的中国民众。据在场的中国民主党全国委员会主席王军涛介绍，这次从纽约就来了17辆各种类型的轿车，总共98人。记者在现场看到，其中多是青年人的面孔。年仅18岁的中国留学生朱欣海更是远道从南面的得克萨斯州休斯敦赶来。他在会议上发言说，“我相信三十四年后的中国年轻人，他们依然是有种的，我相信他们依然是一群有希望的人。”他说，从去年大学校园里年轻人举起白纸的手中，他看到了希望，这一切都表达了中国年轻人的反抗精神。中国留学生朱欣海(记者王允拍摄)与以往不同的是，今年的全美学自联自由精神奖特别颁发给了两个人，一位是去年10月据传在北京四通桥上挂出要求习近平下台横幅的彭立发，另一位是多年来以网名“编程随想”撰写批评中国政府文章并广泛散发的阮晓寰。中国民主党全委会执行长陈闯创律师在给至今还在狱中的阮晓寰颁奖时说，“通过这种匿名的表达，匿名的身份，阮晓寰能够独立思考，不受外界的干扰和压力的影响，这种勇于表达并坚持个人观点的行为，体现了他对自由思想和言论的尊重和追求。在隐私权和互联网自由已经成为当下这个时代非常重要的课题的时候，阮晓寰可以说是个指路明灯。”在纪念仪式结束后，参加集会的二十多人把印有悼念六四罹难者的“国殇之柱”的巨幅招贴布完全牵引开来，从中国大使馆前的道路上缓缓走过。有一些片刻，招贴画上的“国殇之柱”顶端正对着中国大使馆楼顶飘扬的中国国旗。 活动现场照片(记者王允拍摄)记者：王允   编辑：梒青   网编：杰西```0
   ## 6/3/2023 - [不受雷雨阻挡  年轻世代参与纽约六四游行](https://www.rfa.org/mandarin/yataibaodao/renquanfazhi/tj-06032023115304.html)
