--- a/新闻/美国之音.md
+++ b/新闻/美国之音.md
@@ -1,4 +1,6 @@
 
+  ## 6/4/2023 - [六四忌日：天安门广场严密封锁，香港警方如临大敌](https://www.voachinese.com/a/china-tightens-access-to-tiananmen-square-on-anniversary-of-1989-pro-democracy-protests-20230604/7122347.html)
+ ```星期天（6月4日）是1989年天安门血腥镇压事件34周年纪念日。在北京市中心的天安门广场，当局为防止民众前往表达哀悼或纪念之意，进一步强化对广场以及周边地区的封控措施。而在曾经是中国唯一一个可以公开纪念六四的城市香港，警方则挥舞国安法大棒，如临大敌般戒备和禁止民众纪念六四。```0
   ## 6/4/2023 - [拆墙运动发起人乔鑫鑫在老挝失联 疑涉中国公安跨境执法](https://www.voachinese.com/a/global-bangfw-organizer-allegedly-arrested/7122261.html)
  ```“六四”34周年前夕，近期积极呼吁拆除中国网络围墙的异议人士乔鑫鑫在东南亚国家老挝失联。消息人士透露，乔鑫鑫在住所被多名政府人员带走，不排除涉及中国公安跨境执法。有异议人士正透过不同渠道要求美国国务院介入事件。```0
   ## 6/4/2023 - [前中国驻美大使：美国必须停止在中国家门口的军事部署](https://www.voachinese.com/a/former-chinese-ambassador-says-us-must-halt-military-deployments-near-china-20230604/7122158.html)
@@ -44,5 +46,3 @@
  ```美国海军表示，周六，一艘美国和一艘加拿大军舰驶过台湾海峡，这是在北京和华盛顿因中国宣称拥有台湾主权而紧张局势加剧之际，在敏感水道执行罕见的联合任务。```0
   ## 6/3/2023 - [奥斯汀：不寻求冲突，但不会在欺凌和胁迫面前退缩，否认刺激中国武力攻台 ](https://www.voachinese.com/a/us-china-shangri-la-dialogue-taiwan-south-china-sea-20230603/7121408.html)
  ```美国国防部长奥斯汀6月3日在“香格里拉对话”会上发表的演讲中在强调伙伴关系对确保印太地区共同愿景的重要性时也对中国在印太地区咄咄逼人的行为表示关切。他说，美国不寻求冲突或对抗，但不会在欺凌和胁迫面前退缩。他还表示，台海冲突并不是迫在眉睫，也不是不可避免，但一旦爆发冲突将是毁灭性的。奥斯汀否认美国有意刺激中国武力攻打台湾。```0
-  ## 6/3/2023 - [中印互驱记者关系降至新低，边境局势依然紧张或一触即发 ](https://www.voachinese.com/a/as-india-and-china-rivalry-escalates-will-new-delhi-and-beijing-slip-into-another-border-conflict-soon-/7121047.html)
- ```自2020年6月加勒万河谷的流血冲突之后，中印边界争端已持续近三年，且仍无大规模撤军的迹象。两国近日更是互相驱逐记者，进一步限缩沟通渠道。军事专家认为，尽管短期内未必会爆发大规模冲突，中印多轮高层谈判有名无实并且在敏感地带不断强化军事存在，提升了擦枪走火的风险，阻滞双边关系正常化轨迹。```0
