--- a/新闻/德国之声.md
+++ b/新闻/德国之声.md
@@ -1,4 +1,6 @@
 
+  ## 6/4/2023 - [台灣六四晚會意義漸增 港人聚集悼念](https://www.dw.com/zh/台灣六四晚會意義漸增-港人聚集悼念/a-65821476?maca=chi-rss-chi-all-1127-rdf)
+ ```台北在6月4日這天大雨不斷，自由廣場上的六四34週年紀念晚會吸引了近千人參與，雖然規模不比香港維園往年的紀念人潮，但在中國政府不斷文攻武嚇下，仍有不少台灣各年齡層的民眾到場響應，德國之聲記者也在現場看到幾位不斷拭淚的香港參與者。```0
   ## 6/4/2023 - [六四34周年：「天安门母亲」重申三项诉求](https://www.dw.com/zh/六四34周年：「天安门母亲」重申三项诉求/a-65820830?maca=chi-rss-chi-all-1127-rdf)
  ```六四34周年前夕，遇难者家属组成的「天安门母亲」组织发布祭文，重申对六四屠杀「真相、赔偿、究责」的三项诉求。与此同时，德国驻华大使馆周日凌晨在微博发帖悼念六四遭删除。```0
   ## 6/4/2023 - [美国国务院高级官员抵京访问](https://www.dw.com/zh/美国国务院高级官员抵京访问/a-65820554?maca=chi-rss-chi-all-1127-rdf)
@@ -19,12 +21,12 @@
  ```来自175个国家的代表聚集在巴黎联合国教科文组织总部密集谈判，期望达成一项应对塑料污染的全球条约。应该聚焦原生塑料还是再生塑料？环保组织担心谈判的方向走偏了。```0
   ## 6/4/2023 - [股市滑坡 百万富翁人数减少](https://www.dw.com/zh/股市滑坡-百万富翁人数减少/a-65803536?maca=chi-rss-chi-all-1127-rdf)
  ```去年全球低迷的股市，也令很多富豪的财富大幅缩水。百万富翁俱乐部的人数明显低于往年。```0
-  ## 6/4/2023 - [基因技术 - 粮食生产的持久发展之路](https://www.dw.com/zh/基因技术-粮食生产的持久发展之路/a-65808887?maca=chi-rss-chi-all-1127-rdf)
- ```围绕转基因食品，有着各种各样令人不安的传言。但事实上，随着转基因技术的不断提升，越来越多的专家都认为，持久性的粮食生产获得了重要和安全的方法。```0
-  ## 6/4/2023 - [日本出台新政策：每年投入3.5万亿日元“催生”](https://www.dw.com/zh/日本出台新政策：每年投入3-5万亿日元-催生/a-65807886?maca=chi-rss-chi-all-1127-rdf)
- ```日本政府宣布每年投入约3.5万亿日元“催生”。出生率下降趋势已对社会诸多方面造成严重影响。```0
   ## 6/4/2023 - [无人机袭击俄罗斯的背后究竟是怎么回事？](https://www.dw.com/zh/无人机袭击俄罗斯的背后究竟是怎么回事？/a-65803958?maca=chi-rss-chi-all-1127-rdf)
  ```俄罗斯对乌克兰的战争中出现新的形势：在俄罗斯领土上更经常地出现军事袭击。这背后是怎么一回事，西方又如何反应？```0
+  ## 6/4/2023 - [日本出台新政策：每年投入3.5万亿日元“催生”](https://www.dw.com/zh/日本出台新政策：每年投入3-5万亿日元-催生/a-65807886?maca=chi-rss-chi-all-1127-rdf)
+ ```日本政府宣布每年投入约3.5万亿日元“催生”。出生率下降趋势已对社会诸多方面造成严重影响。```0
+  ## 6/4/2023 - [基因技术 - 粮食生产的持久发展之路](https://www.dw.com/zh/基因技术-粮食生产的持久发展之路/a-65808887?maca=chi-rss-chi-all-1127-rdf)
+ ```围绕转基因食品，有着各种各样令人不安的传言。但事实上，随着转基因技术的不断提升，越来越多的专家都认为，持久性的粮食生产获得了重要和安全的方法。```0
   ## 6/4/2023 - [六四週年之際 王丹陷性騷風暴](https://www.dw.com/zh/六四週年之際-王丹陷性騷風暴/a-65818250?maca=chi-rss-chi-all-1127-rdf)
  ```中國六四學運領導人王丹日前遭一名台灣男子指控性騷擾，包含強吻與強暴未遂。指控者在六四34週年這天召開記者會，要求道歉否則提告。隨後，王丹回應：歡迎提告，支持用法律的方式尋找事情的真相。```0
   ## 6/4/2023 - [客座評論：台灣人為甚麼要知道六四？](https://www.dw.com/zh/客座評論：台灣人為甚麼要知道六四？/a-65818108?maca=chi-rss-chi-all-1127-rdf)
@@ -101,10 +103,10 @@
  ```中國脫口秀圈近日因「作風優良，能打勝仗」引起熱議，有網友戲稱，中國言論審查太苛刻，想搞脫口秀「要麼管住嘴，要麼邁開腿（潤至自由世界）」。脫口秀演員們如何看待不斷收緊的審查紅線？脫口秀在兩岸又有何差異？DW訪問了4位曾在兩岸演出的脫口秀演員，請他們將「脫口秀在中國」的包袱一一抖開。```0
   ## 5/25/2023 - [青年失业率居高不下 靠“孔乙己脱长衫”解决？](https://www.dw.com/zh/青年失业率居高不下-靠-孔乙己脱长衫-解决？/a-65732307?maca=chi-rss-chi-all-1127-rdf)
  ```为了防止年轻人陷入“毕业即失业”的困境，中国当局使出浑身解数，一面鼓励中小微企业招聘应届生，一面进行公务员和硕士扩招，同时展开舆论宣传攻势。此外，还有高校暗中用力，让数据“更好看”。```0
-  ## 5/21/2023 - [全球育儿成本韩国最高：钱都花在课外班了](https://www.dw.com/zh/全球育儿成本韩国最高：钱都花在课外班了/a-65674902?maca=chi-rss-chi-all-1127-rdf)
- ```研究显示，韩国是全球育儿成本最高的国家，为GDP的7.79倍，大量花费来自大量的课外补习班。中国位居第二，养育一个孩子到18岁的成本是人均GDP的6.9倍，其次是德国（3.64倍）和法国（2.24倍）。```0
   ## 5/21/2023 - [航运公会：到2032年船舶回收将翻倍](https://www.dw.com/zh/航运公会：到2032年船舶回收将翻倍/a-65669628?maca=chi-rss-chi-all-1127-rdf)
  ```随着航运业船队转型，变得更加利于气候保护，主要分布于亚洲地区的「船舶坟场」在未来几年内可能会获得空前的关注。```0
+  ## 5/21/2023 - [全球育儿成本韩国最高：钱都花在课外班了](https://www.dw.com/zh/全球育儿成本韩国最高：钱都花在课外班了/a-65674902?maca=chi-rss-chi-all-1127-rdf)
+ ```研究显示，韩国是全球育儿成本最高的国家，为GDP的7.79倍，大量花费来自大量的课外补习班。中国位居第二，养育一个孩子到18岁的成本是人均GDP的6.9倍，其次是德国（3.64倍）和法国（2.24倍）。```0
   ## 5/20/2023 - [又一脱口秀演员在中国遭封杀](https://www.dw.com/zh/又一脱口秀演员在中国遭封杀/a-65684797?maca=chi-rss-chi-all-1127-rdf)
  ```脱口秀演员、六月四日、辱华。这是一周以来第二个中国全网封杀脱口秀演员事件的关键字。这次遭封杀的“罗杰叔叔”（UncleRoger）甚至不是中国人，也不是以政治讽刺起家。```0
   ## 5/18/2023 - [欧洲热门景点：中国游客仍未回归](https://www.dw.com/zh/欧洲热门景点：中国游客仍未回归/a-65668922?maca=chi-rss-chi-all-1127-rdf)
