--- a/新闻/法国国际广播电台.md
+++ b/新闻/法国国际广播电台.md
@@ -1,4 +1,10 @@
 
+  ## 6/4/2023 - [台北举办纪念六四烛光晚会 民团称六四也是台湾人的事](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230604-%E5%8F%B0%E5%8C%97%E4%B8%BE%E5%8A%9E%E7%BA%AA%E5%BF%B5%E5%85%AD%E5%9B%9B%E7%83%9B%E5%85%89%E6%99%9A%E4%BC%9A-%E6%B0%91%E5%9B%A2%E7%A7%B0%E5%85%AD%E5%9B%9B%E4%B9%9F%E6%98%AF%E5%8F%B0%E6%B9%BE%E4%BA%BA%E7%9A%84%E4%BA%8B)
+ ```华人民主书院协会等民团4日晚间在台北中正纪念堂前广场举办“六四34周年悼念晚会”，现场以烛光排字8964，传达悼念之意。```0
+  ## 6/4/2023 - [日本与澳大利亚签安保协防式协议](https://www.rfi.fr/cn/%E4%BA%9A%E6%B4%B2/20230604-%E6%97%A5%E6%9C%AC%E4%B8%8E%E6%BE%B3%E5%A4%A7%E5%88%A9%E4%BA%9A%E7%AD%BE%E5%AE%89%E4%BF%9D%E5%8D%8F%E9%98%B2%E5%BC%8F%E5%8D%8F%E8%AE%AE)
+ ```日本防卫大臣滨田靖一与澳大利亚国防部长马勒斯（RichardMarles）今（4）日在新加坡签署协议，强化国防科技合作。台媒解读称，东京继美日安保之后与澳大利亚签署防卫协议，以抗衡中国。```0
+  ## 6/4/2023 - [英国使馆微博放当年“六四”人民日报头版照片](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230604-%E8%8B%B1%E5%9B%BD%E4%BD%BF%E9%A6%86%E5%BE%AE%E5%8D%9A%E6%94%BE%E5%BD%93%E5%B9%B4-%E5%85%AD%E5%9B%9B-%E4%BA%BA%E6%B0%91%E6%97%A5%E6%8A%A5%E5%A4%B4%E7%89%88%E7%85%A7%E7%89%87)
+ ```今天是“六四事件”34周年，即便中国政府多年来，试图彻底抹灭这段历史的所有纪录，仍有许多不畏强权迫害的人士，将相关历史照片、文物散播至世界各国，让历史得以被世人记住。今日中国微博先是传出德国驻中大使馆无惧禁令，PO出悼念六四的短片，接着英国驻中大使馆也PO出，中国官媒过去报道六四的画面，引起哗然。```0
   ## 6/4/2023 - [中国狠学者传与美国赌狠：中国宁可以200城市被炸为废墟也要解放台湾 问美国敢吗？](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230604-%E4%B8%AD%E5%9B%BD%E7%8B%A0%E5%AD%A6%E8%80%85%E4%BC%A0%E4%B8%8E%E7%BE%8E%E5%9B%BD%E8%B5%8C%E7%8B%A0-%E4%B8%AD%E5%9B%BD%E5%AE%81%E5%8F%AF%E4%BB%A5200%E5%9F%8E%E5%B8%82%E8%A2%AB%E7%82%B8%E4%B8%BA%E5%BA%9F%E5%A2%9F%E4%B9%9F%E8%A6%81%E8%A7%A3%E6%94%BE%E5%8F%B0%E6%B9%BE-%E9%97%AE%E7%BE%8E%E5%9B%BD%E6%95%A2%E5%90%97)
  ```中共战狼学者房兵针对武统台湾曾放狠话恫吓称，就算因此以致中国200座城市成废墟也在所不惜，并挑衅称美国敢吗？```0
   ## 6/4/2023 - [印度结束火车车难救援 要寻求知道车祸原因](https://www.rfi.fr/cn/%E4%BA%9A%E6%B4%B2/20230604-%E5%8D%B0%E5%BA%A6%E7%BB%93%E6%9D%9F%E7%81%AB%E8%BD%A6%E8%BD%A6%E9%9A%BE%E6%95%91%E6%8F%B4-%E8%A6%81%E5%AF%BB%E6%B1%82%E7%9F%A5%E9%81%93%E8%BD%A6%E7%A5%B8%E5%8E%9F%E5%9B%A0)
@@ -47,12 +53,6 @@
  ```6月3日，德国首都柏林又出现了民运人士举办的六四纪念活动。在中国驻柏林大使馆门前的Jannowitz大桥上，全球支持中国和亚洲民主化论坛、民主中国阵线、中国共和党和德国中国学生学者联合会共同举办了“六四”34周年纪念活动。```0
   ## 6/3/2023 - [彭立发、张展、李康梦获提名角逐诺贝尔和平奖](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230603-%E5%BD%AD%E7%AB%8B%E5%8F%91-%E5%BC%A0%E5%B1%95-%E6%9D%8E%E5%BA%B7%E6%A2%A6%E8%8E%B7%E6%8F%90%E5%90%8D%E8%A7%92%E9%80%90%E8%AF%BA%E8%B4%9D%E5%B0%94%E5%92%8C%E5%B9%B3%E5%A5%96)
  ```在天安门事件34周年前夕，美国国会暨行政当局中国委员会（CECC）两党领袖6月2日发表书面声明纪念天安门大屠杀事件34周年。他们还宣布增加提名北京四通桥抗议事件主彭立发、公民记者张展以及南京传媒学院学生李康梦等角三人为2023年诺贝尔和平奖候选人。因为“这些英雄的勇气应该要得到全世界的嘉奖。”```0
-  ## 6/3/2023 - [法记者：记住当年只身阻挡坦克的中国年轻人](https://www.rfi.fr/cn/%E6%B3%95%E5%9B%BD/20230603-%E6%B3%95%E8%AE%B0%E8%80%85-%E8%AE%B0%E4%BD%8F%E5%BD%93%E5%B9%B4%E5%8F%AA%E8%BA%AB%E9%98%BB%E6%8C%A1%E5%9D%A6%E5%85%8B%E7%9A%84%E4%B8%AD%E5%9B%BD%E5%B9%B4%E8%BD%BB%E4%BA%BA)
- ```今年6月4日是1989年"六四"天安门屠杀34周年。全球性的法语电视频道-电视国际五台(TV5)长篇报道了纽约六四纪念馆。法国《十字架报》重点报道了34年前6月5日美国摄影师杰夫·怀德纳（JeffWidener）拍摄的坦克人的照片。《十字架报》写道：三十四年前，一名手无寸铁的年轻学生在天安门广场阻拦一辆坦克。该报笔锋一转说，而今年的六四34周年前夕，香港警方在维园及铜锣湾拘捕多人。```0
-  ## 6/3/2023 - [王丹 ：即便在美国也会感到来自中共的威胁](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230603-%E7%8E%8B%E4%B8%B9-%E5%8D%B3%E4%BE%BF%E5%9C%A8%E7%BE%8E%E5%9B%BD%E4%B9%9F%E4%BC%9A%E6%84%9F%E5%88%B0%E6%9D%A5%E8%87%AA%E4%B8%AD%E5%85%B1%E7%9A%84%E5%A8%81%E8%83%81)
- ```天安门事件34周年前，曾参加1989年天安门广场抗议活动的中国异议人士在纽约，为全球唯一的六四纪念馆揭幕，旨在纪念“中国人的民主梦想”。其中当年抗议活动的学生领导人、记念馆创始人王丹表示，“纪念馆的意义不只在于记忆，也是为了当下与未来”。```0
-  ## 6/3/2023 - [香港舞台剧《5月35日》台北上演](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230603-%E9%A6%99%E6%B8%AF%E8%88%9E%E5%8F%B0%E5%89%A7-5%E6%9C%8835%E6%97%A5-%E5%8F%B0%E5%8C%97%E4%B8%8A%E6%BC%94)
- ```六四事件34周年前夕，一部以天安门母亲为主角的香港舞台剧《5月35日》自6月2日起一连在台北演出6场。台湾主演剧团创办人钟伯渊说，该剧反映的是中共如何在这34年来抹灭和洗白有关六四的记忆。他希望透过这出在中国和香港都禁演的舞台剧，来缅怀六四精神，更让观众认清，中共政权对人权的威胁不分对象，无所不在。```0
   ## 6/3/2023 - [巴黎白夜庆祝会上的六四纪念活动](https://www.rfi.fr/cn/%E4%BA%BA%E6%9D%83/20230603-%E5%B7%B4%E9%BB%8E%E7%99%BD%E5%A4%9C%E5%BA%86%E7%A5%9D%E4%BC%9A%E4%B8%8A%E7%9A%84%E5%85%AD%E5%9B%9B%E7%BA%AA%E5%BF%B5%E6%B4%BB%E5%8A%A8)
  ```巴黎市政府举行的庆祝夏日来临的白夜活动在锣鼓声中拉开了序幕，来自华人社群的舞狮表演吸引了大量的游客以及巴黎市民，许多巴黎人携家带口来到市政府广场欣赏音乐与歌舞，就在舞狮表演的附近，十多位巴黎华人以及人权组织代表默默地举着白纸，上面写着在狱中的香港支联会组织的代表，以及被关押的中国异议分子的名字。也有人高举着坦克的图片，以及将镇压学生的政权钉在耻辱柱上的丹麦艺术家高志活（JensGalschiøt）制造的国殇之柱的复制图。```0
   ## 6/3/2023 - [纪念“六四”34周年 美国国会中国委员会发声](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E8%A6%81%E9%97%BB%E5%88%86%E6%9E%90/20230603-%E8%AE%B0%E5%BF%B5-%E5%85%AD%E5%9B%9B-34%E5%91%A8%E5%B9%B4-%E7%BE%8E%E5%9B%BD%E5%9B%BD%E4%BC%9A%E4%B8%AD%E5%9B%BD%E5%A7%94%E5%91%98%E4%BC%9A%E5%8F%91%E5%A3%B0)
