--- a/新闻/自由亚洲电台亚太.md
+++ b/新闻/自由亚洲电台亚太.md
@@ -1,8 +1,10 @@
 
-  ## 6/4/2023 - [台湾政坛掀起#metoo 蓝绿政治人物、王丹都遭指控性骚](https://www.rfa.org/mandarin/yataibaodao/renquanfazhi/hcm-06042023050321.html)
- ```台湾一名李姓网友在六四这天，于台北出面控诉89民运领袖王丹性骚扰，并要求王丹在台北时间6日午夜之前道歉否则将提告。王丹回应表示欢迎提告，支持以法律寻找真相。台湾近期从一名民进党前党工称遭性骚扰，在党内却无法获得正义开起，掀起一连串“#metoo”挺身揭发政坛性骚扰经历，蓝绿都有人被点名。李姓网友称，他是受到启发，才会在事发9年后挺身而出。李姓网友两天前先在个人脸书发文指控，9年前应王丹之邀前往美国，遭到王丹性骚。4日上午他在台北市议员林亮君陪同下，以公开露脸方式重述当时的经过。李姓网友称，2014年6月6日晚间，在纽约某饭店，遭王丹强吻，并“强暴未遂”。他说，接下来的几天中，王丹不时对他言语骚扰、有意无意暗示试图发生关系，因为在美国举目无亲，语言又不通，一周多的时间他担心受怕，最后提前返台。控诉网友拿对话截图为证对于有部分网友质疑，李姓网友提出他与王丹的对话截图指出，王丹在2014年5月30号台湾时间下午4点47分传讯息“在纽约等你”，称这是一个明确的邀约。他也公布几张王丹私人住所照片，与王丹直播比对，像是挂画、台灯等位置都完全吻合，证明他确实去过。由于前一天王丹以“没有性骚扰”以及“记忆落差”回应相关指控，李姓网友对王丹喊话称他手上有录音等相关证据，要求王丹道歉否则提告。“如果6月6号之前，没有在社群为过去行为，所欺负过或骚扰、甚至侵害过的人道歉，我会带着证据向检方提告。”“欢迎提告，支持用法律的方式寻找事情的真相。”王丹针对对方指控作上述回覆。六四前出面揭发动机为何？李姓网友揭发所谓的性骚内幕，时间正巧与六四纪念馆揭幕同一日。李姓网友主动说明，六四是世界民主非常重要的日子，但也是一个“污点”。他说，王丹当年曾站在坦克面前，为对抗中共强权打压人权发声。但现在他面对王丹，“就像那个站在坦克车面前的人”。“我很害怕，我觉得如果我一不小心，就可能会被你这台坦克打死，你比我有太多的权势。你有太多的光环，你的手甚至可以伸到政治或是学术圈。”李姓网友说道。李姓网友一度曾对两位前台北市议员投诉，但是，他说9年前当时身心状况不稳定，又担心被抹黑成“中国派来的打手”，所以作罢。如今受到近期好几位政治工作者揭发在职场遭受性骚以及不当对待的启发，给了他勇气站出来。连日遭指控王丹不愿揣测动机尊重网友判断除了李姓网友外，一名文字工作者也发文称，过去在台湾清华大学求学期间，也遭到王丹性骚扰。王丹3日推文回应，“为什么短短几天突然涌现这么多指控，我无意揣测。相信大家有自己的判断”。他说，不会一一回应，那会耗费大量精力和时间。他把判断交给网友。不管相信还是不相信，他都尊重。他也感谢选择相信他的朋友。王丹强调，不会因为这些风风雨雨，停止正在推动的工作，包括六四纪念馆，智库“对话中国”，针对中共大外宣的反认知作战，对未来中国转型方案的探讨，为国内异议人士出版著作等。“不仅不会停止，还会更加努力。”台湾政坛掀起#metoo风潮5月31日，一名民进党的前党工，以具名方式在脸书发了一封，“为时已晚但也该被好好接住的求救信”，揭发遭到一名与民进党友好的导演“辉哥”性骚扰，当她向当时民进党妇女部主任许嘉恬求助时，她却转身离开，遭到二度伤害。她引用近期政治夯剧《人选之人-造浪者》一句知名的台词，“我们不要就这样算了，好不好？很多事情不能就这样算了，如果这样的话，人就会慢慢地死掉，会死掉。”这篇贴文在台湾政坛炸锅，除了许嘉恬去职外，当时的民进党副秘书长林飞帆还为“忽略当事人不走申诉管道的背后原因”疏忽致歉。紧接着另名女党工指控遭到男同事性骚扰，向时任青年部主任蔡沐霖反映，还以影响部门气氛为由逼她道歉，此事还惊动高层。对于党内性骚连环爆，民进党现任主席赖清德多次向受害者和台湾社会道歉，他感谢受害者勇敢站出来，强调面对职场霸凌及性平事件，绝对不必要“大局为重”，人身安全及权利才是最重要的。民进党前主席、台湾总统蔡英文也在脸书发文，这两天，接连有受害者揭露，曾经在民进党遭受的性骚扰事件，得知他们的受害经历，感到很不舍和痛心。“身为前任党主席，责无旁贷。要向受害的朋友和社会大众，表达最深的歉意。”无独有偶，蓝营也有政治人物被点名卷入性骚事件，镜文学总经理董成瑜在脸书揭露，一名蓝营时任县长、现为立委的政治人物曾在餐叙上未经其同意抓她的手，甚至还突然站起来“抱住她的头亲她”。外界依照其描述推测为国民党立委傅崐萁，傅崐萁还发声明称，“若有任何性骚扰情事，请依法提出告诉”！国民党征召的总统参选人侯友宜发声明，呼吁党中央“绝不能轻忽此事”。台湾政坛的#metoo运动，在短短不到一周时间已经陆续传出逾十件，还有多少未爆弹，蓝绿都不敢轻忽。自由亚洲电台记者黄春梅台北报道责编陈美华许书婷```0
+  ## 6/4/2023 - [台首映纪录片《刘晓波在福尔摩沙》悼六四](https://www.rfa.org/mandarin/yataibaodao/renquanfazhi/ec-06042023112812.html)
+ ```今年是六四34周年，也是《零八宪章》发起人刘晓波在狱中病逝六周年。《刘晓波在福尔摩沙》纪录片监制谢小韫表示，于今年6月4日在台北首映该片，希望通过影片悼念六四，表达对刘晓波的怀念，同时想让更多人明白，民主自由是普世价值，呼吁中国政府平反六四和释放所有良心犯。 读者广场|【我是怎么知道六四的】来信节选刘晓波纪录片6月4日将于台北放映 一九八九年广场四君子之一和《零八宪章》发起人刘晓波，已病逝近六周年，台湾的制作人和导演，把去年中国流亡作家廖亦武、颜柯夫等人，在新北市三芝海边刘晓波雕塑前，举办刘晓波逝世五周年纪念音乐会的情况，以及大家对刘晓波的怀念，制作成纪录片，并于今年六四事件34周年的日子，于台北首映。纪录片监制、前台北市文化局长谢小韫表示，当年六四事件发生时，是全球关注的焦点，34年过去，希望借这次的机会，提醒各界刘晓波对中国民主发展所起的重要作用。谢小韫："刘晓波怎么会在福尔摩沙呢？因为他的骨灰被撒在大海里，只要有海岸的地方，就有刘晓波的灵魂。我们将借着刘晓波先生作为一个中国公共知识分子的伟大的人格，我们要把它记录下来，让很多的人来了解民主和自由，是人类的普世的价值。我们希望中国政府能够重视这个议题六四事件，最好能够平反释放所有的良心犯。" 谢小韫表示，希望借这次的机会，提醒各界刘晓波对中国民主发展的重要。(陈子非摄）廖志峰：记住刘晓波防止历史重演多名台湾的文化、艺术和学术界代表，出席纪录片的首映。纪录片顾问、允晨文化发行人廖志峰表示，大家要记住刘晓波，防止悲剧的历史重演。廖志峰："怀念刘晓波先生，同时也提醒我们不要忘记六四，他是一个时代的悲剧，这样的悲剧应该被记得、被记忆，他是一个历史的教训。革命尚未成功，我觉得还是一种提醒，我觉得这是一个极权政治，它对人性的摧残跟压迫，你如果不去提醒，它就一定会回来。我们不要忘记我们今天所享有的出版、影片观赏的自由，曾经有人付出这么多的努力，我们不应该让那个容易归零。" 廖志峰表示，大家要记住刘晓波，防止悲剧的历史重演。(陈子非摄）曾建元：台湾可借鉴其遭遇反思现况华人民主书院理事长曾建元表示，六四事件是中国专制极权的象征，刘晓波是中国民间对民主自由追求的象征，但在中国的下一代，刘晓波这个名字，无人知晓，香港现在无法再提起他的贡献，由民主的台湾，纪录刘晓波的故事。曾建元："他发起的《零八宪章》，揭示了中国的民间社会，对于追求宪政民主的理想。他正好打破和突破中国共产党编织的中国特色社会主义法治或者是人权的这套谎言。我们在这边（台湾），帮中国人记住刘晓波这个人。"曾建元表示，纪录片回忆过去，同时也反映台湾现实要面对的情况。他以台湾艺术家郑爱华为刘晓波创作的纪念雕塑，只在台北市政府展示一天就被要求送走为例，认为台湾人应该反思如何面对两岸问题。曾建元："当年的台北市市长现在选总统（编辑按：意指柯文哲），如果他在处理刘晓波的铜像，都这样投鼠忌器，那怎么去领导台湾，面对中共的种种威胁呢？这个纪录片是给台湾社会的一个拷问，让政治人物现形，就是我们台湾人面对刘晓波的问题，当我们面对的现实的政治问题，或者涉及到两岸的经济的问题的时候，我们是不是还勇于表达我们对于刘晓波的尊重。我觉得在考验台湾人的良心和道德勇气"。参与纪录片制作的艺术家颜柯夫表示，将对刘晓波的思念拍摄成纪录片，是希望起到抛砖引玉的作用，让更多人关注中国大陆的民主化状况。他还表示，刘晓波纪录片在六四首映有重大的意义，显示能够把八九民运民主自由的火种，延续下去。 记者：陈子非   责编：陈美华许书婷 申铧   网编：杰西```0
+  ## 6/4/2023 - [台湾掀起#MeToo 热潮   王丹、蓝绿政治人物都被控性骚扰](https://www.rfa.org/mandarin/yataibaodao/renquanfazhi/hcm1-06042023114630.html)
+ ```一名李姓网友在六四这天，在台北出面指控八九民运领袖王丹性骚扰，并要求王丹在台北时间6日午夜之前道歉否则将提告。王丹对此再次作出回应。台湾近期掀起“#MeToo”(米兔）运动的热潮，蓝绿都有政治人物被点名。 王丹身陷性骚扰指控"李元钧"首次接受采访 李姓网友两天前先在个人脸书发文指控，9年前应王丹之邀前往美国，遭到王丹性骚扰。4日上午他在台北市议员林亮君陪同下，以公开露脸方式重述当时的经过。李姓网友称，2014年6月6日晚间，在纽约某饭店，遭王丹强吻，并“强暴未遂”。他说，接下来的几天中，王丹不时对他言语骚扰、有意无意暗示试图发生关系。他说，因为在美国举目无亲，语言又不通，一周多的时间他担心受怕，最后提前返台。 李姓网友拿对话截图为证对于有部分网友对他的指控表示质疑，李姓网友拿出他与王丹的对话截图指出，王丹在2014年5月30号台湾时间下午4点47分传讯息“在纽约等你”，称这是一个明确的邀约。他也公布几张王丹私人住所照片，与王丹直播比对，像是挂画、台灯等位置都完全吻合，证明他确实去过。由于前一天王丹以“没有性骚扰”以及“记忆落差”回应相关指控，李姓网友对王丹喊话称，他手上有录音等相关证据，要求王丹道歉否则提告。“如果6月6号之前，没有在社群为过去行为，向所欺负过或骚扰、甚至侵害过的人道歉，我会带着证据向检方提告。”“欢迎提告，支持用法律的方式寻找事情的真相。”王丹接受本台查证时做上述回复。李姓网友出示与王丹的对话截图，证明曾受王丹之邀赴美。(记者李宗翰摄)六四前出面揭发动机为何？李姓网友揭发所谓的性骚扰内幕，时间正巧与王丹参与的六四纪念馆在纽约揭幕同一日。李姓网友主动说明，六四是世界民主非常重要的日子，但也是一个污点。他说，王丹当年曾站在坦克面前，为对抗中共强权打压人权发声。但现在他面对王丹，“就像那个站在坦克车面前的人”。“我很害怕，我觉得如果我一不小心，就可能会被你这台坦克打死，你比我有太多的权势。你有太多的光环，你的手甚至可以伸到政治或是学术圈。”李姓网友说道。李姓网友一度曾对两位前台北市议员投诉，但是，他说9年前当时身心状况不稳定，又担心被抹黑成“中国派来的打手”，所以作罢。如今受到近期好几位政治工作者揭发在职场遭受性骚扰以及不当对待的启发，给了他勇气站出来。 连日遭指控王丹不愿揣测动机尊重网友判断除了李姓网友外，一名文字工作者也发文称，过去在台湾清华大学求学期间，也遭到王丹性骚扰。王丹3日推文回应，“为什么短短几天突然涌现这么多指控，我无意揣测。相信大家有自己的判断”。他说，不会一一回应，那会耗费大量精力和时间。他把判断交给网友。不管相信还是不相信，他都尊重。他也感谢选择相信他的朋友。王丹强调，不会因为这些风风雨雨，停止正在推动的工作，包括六四纪念馆，智库“对话中国”，针对中共大外宣的反认知作战，对未来中国转型方案的探讨，为国内异议人士出版著作等。“不仅不会停止，还会更加努力。” 台湾政坛掀起#MeToo风潮5月31日，一名民进党的前党工，以具名方式在脸书发出《为时已晚但也该被好好接住的求救信》，揭发遭到一名与民进党友好的导演“辉哥”性骚扰，当她向当时民进党妇女部主任许嘉恬求助时，她却转身离开，遭到二度伤害。她引用近期政治夯剧《人选之人-造浪者》一句知名的台词，“我们不要就这样算了，好不好？很多事情不能就这样算了，如果这样的话，人就会慢慢地死掉，会死掉。”这篇贴文在台湾政坛炸锅，除了许嘉恬去职外，当时的民进党副秘书长林飞帆还为“忽略当事人不走申诉管道的背后原因”疏忽致歉。紧接着另一名女党工指控遭到男同事性骚扰，向时任青年部主任蔡沐霖反映，还以影响部门气氛为由逼她道歉，此事还惊动高层。对于党内性骚连环爆，民进党现任主席赖清德多次向受害者和台湾社会道歉，他感谢受害者勇敢站出来，强调面对职场霸凌及性平事件，绝对不必要“大局为重”，人身安全及权利才是最重要的。民进党前主席、台湾总统蔡英文也在脸书发文说，这两天，接连有受害者揭露，曾经在民进党遭受的性骚扰事件，得知他们的受害经历，感到很不舍和痛心。“身为前任党主席，责无旁贷。要向受害的朋友和社会大众，表达最深的歉意。”无独有偶，蓝营也有政治人物被点名卷入性骚事件，镜文学总经理董成瑜在脸书揭露，一名蓝营时任县长、现为立委的政治人物曾在餐叙上未经其同意抓她的手，甚至还突然站起来“抱住她的头亲她”。外界依照其描述推测为国民党立委傅崐萁，傅崐萁还发声明称，“若有任何性骚扰情事，请依法提出告诉”！国民党征召的总统参选人侯友宜发声明，呼吁党中央“绝不能轻忽此事”。台湾政坛的#MeToo运动，在短短不到一周时间已经陆续传出逾十件，还有多少未爆弹，蓝绿都不敢轻忽。 记者：黄春梅   责编：陈美华许书婷 申铧   网编：杰西```0
   ## 6/4/2023 - [天安门母亲：“永远不会忘记那个黑暗的夜晚”](https://www.rfa.org/mandarin/yataibaodao/renquanfazhi/gt-06042023041129.html)
- ```八九“六四”34周年这天，六四死难者家属群体“天安门母亲”的多名成员在公安的监视下，到北京万安公墓纪念逝者。天安门母亲群体表示，作为亡者的亲属，他们永远不会忘记那个黑暗的夜晚。在这一天，有网民发起六四静思节绝食一天的活动。周六晚，中国境内的微信、QQ等社交账号被禁止更换头像。六月四日这天，天安门广场和周边戒备森严，军警和便衣三步一岗，禁止路人聚集、停留。警察还检查路人的身份证。上午，一位经过天安门广场的外省人李先生告诉本台：“我在北京，天安门周边全都是人脸识别的摄像头，你路过，就有警察在喊，前面的人拦截下来，要查身份证、登记，便衣特别多。只要你犯一点事就直接刑事拘留。”在北京警方高度戒备下，6名六四难属身穿黑色衣服纪念六四期间被杀害的亲人。（万安公墓六四难属提供）在微信、QQ等聊天工具上，今年的六四周年日未见到有人纪念六四死难者的白菊花、蜡烛。对此，李先生说：“往年纪念日都有，今年打压特别狠，现在你露头就抓。”六四事件已经过去了34年，但它仍然是中国历史上最具争议性和敏感性的事件之一。 六四静思节网民自发绝食一天湖南网民田先生告诉本台，周六晚，国内网民的微信、QQ被禁止更换头像，当天仍有人以“六四静思节”绝食一天：“可能没有以往的纪念热度，但还是有的。今天是（人权律师）唐荆陵倡导的静思节，我们群里的人绝食一天，以示抗议。大部分人会记住这一天的。腾讯QQ、微信从昨天晚上起，不让你修改头像。”当天上午，北京“天安门母亲”群体发言人尤维洁、成员黄金平、袁刃、郝建、段昌琪等人，在北京警方的“护送”下，前往万安公墓祭奠他们在六四事件中失去的亲人。86岁高龄的张先玲近期因身体不适，未能到场。 6月4日凌晨，中国境内网民无法更换微信、QQ聊天工具的头像。（万安公墓六四难属提供）六四难属：永不会忘记那个黑暗的夜晚现场视频中，6位难属身穿黑色衣服，向逝者鞠躬默哀。六四遇难者杨燕声的妻子黄金平在致辞中说：“六四34周年过去了，在这个刻骨铭心的日子，我们都聚集在西郊的万安公墓祭奠我们在1989年6月4日惨遭屠杀遇难的亲人。。。。。”“天安门母亲”群体发表的祭文写道：三十四年前的今天，当时的政府动用野战军使用机枪、坦克和装甲车，在首都长安街以及其他重要街道上，无视马路上众多的民众，横行霸道、真枪实弹地向人群开枪，用坦克碾压，残暴地镇压了学生和市民们。我们的亲人，他们就是在那个血腥的夜晚倒在罪恶的枪弹下，为了心中的理想献出了宝贵的生命。还称，作为亡者的亲属，我们永远不会忘记那个黑暗的夜晚，永远记得。1989年春天，北京天安门广场发生了大规模抗议活动，数以万计的学生和市民聚集在广场上要求政治改革和反对腐败。然而，在当局的镇压下，这次运动以悲惨结局告终。六四34周年日当天，许多中国网民发起六四静思节活动，绝食一天。（万安公墓六四难属提供）天安门母亲群体成员电话通讯被屏蔽本台当天致电天安门母亲代表尤维洁、张先玲等人，但始终无法接通。记者多次致电张先玲家的座机，但记者能听到对方说话，对方听不到记者到声音。张先玲的家人在电话中说：“喂。。。，境外的电话就别打了，现在是在监控状态，您的境外电话被掐断了，听不到您的声音。”此次活动引起了海内外媒体和民众关注。许多人认为，“天安门母亲”的坚强与勇气令人感动，并呼吁中国政府应该正视历史、追求真相，并给那些无辜死难者一个交代。6月4日，在全球各地都有人纪念这个重要时刻，美国、台湾及香港等地，有民间组织集会或个人通过绝食一天的活动，表达对那些失去生命或被捕入狱者的怀念，并呼吁中国政府重新审视此事。 记者：古亭   责编：陈美华许书婷 申铧   网编：杰西```0
+ ```八九“六四”34周年这天，六四死难者家属群体“天安门母亲”的多名成员在公安的监视下，到北京万安公墓纪念逝者。天安门母亲群体表示，作为亡者的亲属，他们永远不会忘记那个黑暗的夜晚。在这一天，有网民发起六四静思节绝食一天的活动。周六晚，中国境内的微信、QQ等社交账号被禁止更换头像。 六四34周年前夕香港警方逮捕4人六四事件34周年　人权组织敦促中国政府承认屠城责任"六四"难属坚持祭奠亲人香港前支联会成员变通悼"六四"中共如何令十四亿人患了"六四失忆症"？ 六月四日这天，天安门广场和周边戒备森严，军警和便衣三步一岗，禁止路人聚集、停留。警察还检查路人的身份证。上午，一位经过天安门广场的外省人李先生告诉本台：“我在北京，天安门周边全都是人脸识别的摄像头，你路过，就有警察在喊，前面的人拦截下来，要查身份证、登记，便衣特别多。只要你犯一点事就直接刑事拘留。”在北京警方高度戒备下，6名六四难属身穿黑色衣服纪念六四期间被杀害的亲人。（万安公墓六四难属提供）在微信、QQ等聊天工具上，今年的六四周年日未见到有人纪念六四死难者的白菊花、蜡烛。对此，李先生说：“往年纪念日都有，今年打压特别狠，现在你露头就抓。”六四事件已经过去了34年，但它仍然是中国历史上最具争议性和敏感性的事件之一。 六四静思节网民自发绝食一天湖南网民田先生告诉本台，周六晚，国内网民的微信、QQ被禁止更换头像，当天仍有人以“六四静思节”绝食一天：“可能没有以往的纪念热度，但还是有的。今天是（人权律师）唐荆陵倡导的静思节，我们群里的人绝食一天，以示抗议。大部分人会记住这一天的。腾讯QQ、微信从昨天晚上起，不让你修改头像。”当天上午，北京“天安门母亲”群体发言人尤维洁、成员黄金平、袁刃、郝建、段昌琪等人，在北京警方的“护送”下，前往万安公墓祭奠他们在六四事件中失去的亲人。86岁高龄的张先玲近期因身体不适，未能到场。 6月4日凌晨，中国境内网民无法更换微信、QQ聊天工具的头像。（万安公墓六四难属提供）六四难属：永不会忘记那个黑暗的夜晚现场视频中，6位难属身穿黑色衣服，向逝者鞠躬默哀。六四遇难者杨燕声的妻子黄金平在致辞中说：“六四34周年过去了，在这个刻骨铭心的日子，我们都聚集在西郊的万安公墓祭奠我们在1989年6月4日惨遭屠杀遇难的亲人。。。。。”“天安门母亲”群体发表的祭文写道：三十四年前的今天，当时的政府动用野战军使用机枪、坦克和装甲车，在首都长安街以及其他重要街道上，无视马路上众多的民众，横行霸道、真枪实弹地向人群开枪，用坦克碾压，残暴地镇压了学生和市民们。我们的亲人，他们就是在那个血腥的夜晚倒在罪恶的枪弹下，为了心中的理想献出了宝贵的生命。还称，作为亡者的亲属，我们永远不会忘记那个黑暗的夜晚，永远记得。1989年春天，北京天安门广场发生了大规模抗议活动，数以万计的学生和市民聚集在广场上要求政治改革和反对腐败。然而，在当局的镇压下，这次运动以悲惨结局告终。六四34周年日当天，许多中国网民发起六四静思节活动，绝食一天。（万安公墓六四难属提供）天安门母亲群体成员电话通讯被屏蔽本台当天致电天安门母亲代表尤维洁、张先玲等人，但始终无法接通。记者多次致电张先玲家的座机，但记者能听到对方说话，对方听不到记者到声音。张先玲的家人在电话中说：“喂。。。，境外的电话就别打了，现在是在监控状态，您的境外电话被掐断了，听不到您的声音。”此次活动引起了海内外媒体和民众关注。许多人认为，“天安门母亲”的坚强与勇气令人感动，并呼吁中国政府应该正视历史、追求真相，并给那些无辜死难者一个交代。6月4日，在全球各地都有人纪念这个重要时刻，美国、台湾及香港等地，有民间组织集会或个人通过绝食一天的活动，表达对那些失去生命或被捕入狱者的怀念，并呼吁中国政府重新审视此事。 记者：古亭   责编：陈美华许书婷 申铧   网编：杰西```0
   ## 6/3/2023 - [中国大使馆前“六四大屠杀34周年纪念会” 年轻人为主](https://www.rfa.org/mandarin/yataibaodao/renquanfazhi/wy2-06032023190759.html)
  ```由全美中国学生学者自治联合会主办的“六四大屠杀34周年纪念会”，6月3日下午2点在中国驻美大使馆门前的广场举行。多位当年天安门民主运动的学生领袖及各界民主人士超过百人到现场参与集会，其中尤以年轻人为主。 不受雷雨阻挡年轻世代参与纽约六四游行民主女神像前华盛顿举办六四烛光悼念活动纽约六四纪念馆开幕六四领袖重申追求自由中国决心六四34周年特别报导：接过广场上话筒的女青年 这是一场坚持了三十四年的集会。主办者依然是全美学自联。 【中国驻美大使馆前的六四纪念会】六四屠杀34周年，悼念和纪念活动在这里也举行了34次。这次以新一代的年轻人为主。pic.twitter.com/mkm0YfX15X—自由亚洲电台(@RFA_Chinese)June4,2023 今年的纪念会依然是在华盛顿中国驻美大使馆前，但已经从使馆对面的街心花园挪到了紧靠花园的马路边上，地界更为开阔；参会人员在马路和人行道上铺开，显得更有气势。由于去年底发生了席卷全国多个城市、以青年人为主的白纸运动，今年的六四大屠杀纪念会尤其强调了年轻人在民主运动中的作用。多位当年天安门民主运动的学生领袖及各界民主人士超过百人到现场参与集会(记者王允拍摄)全美学自联理事、佐治亚大学博士生古懿在开幕词中引用了从美国哥伦比亚大学传出的诗句，“我们是广场上的遗孤，我们是野火后的新芽，”“我们在方舱里自救，我们在铁链下自由，”“我们曾经站在坦克前，我们也曾经站在四通桥上，我们今天依旧站在这里，我们明天还要站到你们面前。”中国民主运动海外联席会议主席魏京生也在发言中为新生代民主力量的崛起而感到欣慰，他说，“现在的年轻人有没出息的，但也有有出息的，就像今天来的年轻人，都是有出息的。”这句话引来众人热烈的掌声。中国民主运动海外联席会议主席魏京生（中）集会现场讲话（记者王允拍摄）这次参会的有不少是从纽约等美国各地赶来的中国民众。据在场的中国民主党全国委员会主席王军涛介绍，这次从纽约就来了17辆各种类型的轿车，总共98人。记者在现场看到，其中多是青年人的面孔。年仅18岁的中国留学生朱欣海更是远道从南面的得克萨斯州休斯敦赶来。他在会议上发言说，“我相信三十四年后的中国年轻人，他们依然是有种的，我相信他们依然是一群有希望的人。”他说，从去年大学校园里年轻人举起白纸的手中，他看到了希望，这一切都表达了中国年轻人的反抗精神。中国留学生朱欣海(记者王允拍摄)与以往不同的是，今年的全美学自联自由精神奖特别颁发给了两个人，一位是去年10月据传在北京四通桥上挂出要求习近平下台横幅的彭立发，另一位是多年来以网名“编程随想”撰写批评中国政府文章并广泛散发的阮晓寰。中国民主党全委会执行长陈闯创律师在给至今还在狱中的阮晓寰颁奖时说，“通过这种匿名的表达，匿名的身份，阮晓寰能够独立思考，不受外界的干扰和压力的影响，这种勇于表达并坚持个人观点的行为，体现了他对自由思想和言论的尊重和追求。在隐私权和互联网自由已经成为当下这个时代非常重要的课题的时候，阮晓寰可以说是个指路明灯。”在纪念仪式结束后，参加集会的二十多人把印有悼念六四罹难者的“国殇之柱”的巨幅招贴布完全牵引开来，从中国大使馆前的道路上缓缓走过。有一些片刻，招贴画上的“国殇之柱”顶端正对着中国大使馆楼顶飘扬的中国国旗。 活动现场照片(记者王允拍摄)记者：王允   编辑：梒青   网编：杰西```0
   ## 6/3/2023 - [不受雷雨阻挡  年轻世代参与纽约六四游行](https://www.rfa.org/mandarin/yataibaodao/renquanfazhi/tj-06032023115304.html)
@@ -27,5 +29,3 @@
  ```"六四"34周年前夕，中国多地实施禁止民间集会的严控措施。北京异议人士查建国、六四伤残人士齐志勇被上岗；独立媒体人高瑜被带到河南旅游；成都秋雨教会信徒被公安"维稳"；贵州人权研讨会个别成员被监控。有人形容，今年"六四"期间的维稳程度堪比中共二十大保安。 六四前夕许志永狱中呼吁　以禁食悼念"六四"【我是怎么知道六四的】来信节选 六四34周年临近，北京、湖南、四川、安徽、湖北及贵州等地异议人士、人权组织或知名维权人士，被警方上岗或者被强制旅游。据一位知情人士本周五（6月2日）告诉本台，北京独立媒体人高瑜被公安带到河南洛阳旅游：“高大姐被旅游了，在河南”。北京独立媒体人高瑜（古亭提供）贵州一位日前接到公安警告，不得接受采访的异议人士告诉本台：“贵州人权研讨会的陈西、李任科、廖双元、黄燕明以及张贾龙等人分别被警告、上岗或带到贵阳郊区农家乐和度假村。国保像往年一样，等到六四周年日结束后，才能回到贵阳家中。”这位人士还说，两天前，北京异议人士查建国、何德普、江棋生，六四伤残者齐志勇等至少十人被上岗，八九学运参与者季风则被带到贵州省桐梓县旅游。正在贵州家乡的季风对本台证实，他被旅游期间不得接受媒体采访：“所有的媒体采访我，现在都被我拒绝。因为跟我打了招呼，不让我接受采访。我说我可不可以发照片，连照片都不能发。江棋生没消息，电话打不通。这就像二十大期间，绝对不能发照片。”异议人士季风（古亭提供）合肥警方上门要带八九参与者沈良庆旅游另一位八九学运参与者，安徽合肥异议人士沈良庆告诉本台，当地公安已经通知他在六四周年日期间，须接受监控：“前几天，合肥市公安局国保支队和包河分局国保大队找我谈过话，说准备带我出去旅游，明天就要出去旅游。他们肯定会要求这几天不能谈六四话题。再有，我在旅游期间肯定是处在软禁状态。”异议人士沈良庆（古亭提供）湖南株洲多位接到公安警告的异议人士告诉本台，当局此次严控程度相当于中共二十大会议期间。其中一位陈先生说，警察周五早上刚到过他家：“他（国保）刚上我家来，才走了十分钟，因为六四这件事，说要来看守我，实施管控，可能持续到6月6日，我对此也没办法。我们这里不久前还拘留一个人叫陈思明，因为他在发推特（六四图片）。可能会被刑事拘留，因为他已被拘留四到五次了。”成都警方六四周年日与活跃人士"聚餐"在四川成都，当地异议人士宋先生告诉本台，四川环保作家谭作人，已被警方带走旅游，成都秋雨教会的多位活跃人士也被公安“打招呼”，在六四周年日当天，由警方安排“聚餐”。他说：“秋雨教会比较活跃的一些会友，这一、两天收到（国保）打招呼，我也接到电话，6月4日那一天，要被（国保）约出去吃个饭。谭作人每年六四都要被带出去旅游。”除了异议人士被监控，维权人士也被当局纳入控制范围。武汉维权人士周先生对本台说：“我们这些人虽然跟六四挂不上勾，但是现在六四异议人士该旅游的被旅游了。我们这些维权者也被国保当作所谓维稳的一部分。”每年的六四周年日，中国警方都会控制异议人士。有舆论认为，这是因为当局担心这些人士举行纪念活动或者发表相关言论，而这些活动和言论都被认为是对当局的挑战和批评。此外，中国政府一直试图掩盖、歪曲六四的真相，并禁止公民自由地表达对该事件的看法。因此，在这个敏感时期，警方会加强管控以维护政治秩序。 记者：古亭   责编：陈美华、许书婷、嘉远   网编：洪伟```0
   ## 6/1/2023 - [六四纪念馆召开揭幕记者会 　王丹：为未来储备动力](https://www.rfa.org/mandarin/yataibaodao/renquanfazhi/tj-06012023154632.html)
  ```由1989年天安门学运领袖筹建的六四纪念馆即将于6月2日在纽约曼哈顿开馆。为此，纪念馆筹备团队在本周四召开揭幕记者会。多位六四学运领袖在会上谈及创立纪念馆的意义以及对中国民主运动的展望。 专栏：六四34周年　纽约六四纪念馆展现什么？"六四"34周年　纪念馆凝聚两代人民主抗争精神 本周四，多位1989年天安门民主运动领袖在纽约曼哈顿召开了六四纪念馆揭幕记者会，王丹、周锋锁、当年的工人运动领袖吕京花等与会出席。王丹在会上表示，六四纪念馆会在纽约设立是因为香港当局在2021年关闭了在香港的六四纪念馆：“中国当局的意图很明显，他们想掩盖历史，让世界忘记中国当局犯的罪，他们希望大家忘记共产党是建立在暴力及谎言的政权。”王丹指出，透过六四纪念馆，让世人记住1989年的天安门民主运动是件相当重要的事：“1989年是中国近代历史最重要的转折点，比较1989年之前以及过后，会发现中国是两个完全不同的国家。……六四在中国至今依旧是很敏感的话题，它代表着政治反动，我们要维持这股反对力量，并为未来储备动力。纪念六四不仅是为了我们，也是为了中国；不只是为了过去，也是为了未来。”周锋锁：纪念馆展品很多来自六四参与者周锋锁也谈到，纪念馆象征着1989年民主运动世代以及“白纸运动”年轻世代对于民主中国的渴望：“我们抱有希望，不管我们如何被打败，也无论我们还要经过什么样的难关，民主中国的梦一直都存在。我们会团结在一起，就像34年前在天安门广场一样，全世界的人都看到我们对自由中国的梦想。”周锋锁指出，纪念馆中的文物很多是来自六四运动参与者的捐赠：“长期以来，我都在援助因为六四被关押的政治犯，很多人都因为1989年的民运被中国当局起诉，所以我们组建了信息联络网，这也是为何这些展品会到我这边。这些参与者希望这些展品能被展示、保存，同时他们也希望身份能被保护。”六四纪念馆馆长于大海向本台介绍馆藏文物（记者唐缘媛摄）现场众多年轻志愿者　王丹：大家都有自由中国梦在纪念馆的会场中，有众多年轻人参与筹备工作，当中不乏有仍打算回国的中国留学生。针对有关这些青年人是受到什么样的鼓舞，才愿意冒着被中国当局秋后算帐的风险前往纪念馆帮忙的问题，王丹解释道：“我们两代人分享着一样的价值观，我们都希望中国可以变民主。很多的年轻志愿者来自‘白纸运动’世代，但我们分享着同样的梦想，这就是为什么他们参与纪念馆的活动。”推特充斥六四纪念馆假帐号　王丹：面对网军已有所准备在六四纪念馆开幕前夕，社群平台推特上出现大量六四纪念馆的虚假帐号，并试图骗取支持者捐款。王丹就此接受本台记者采访表示，他们对于中国网军的攻击、威胁已有所准备，并没有特别忧心。王丹说：“被网军骚扰和在未来可能遇到一些麻烦，这都是预料之中的。这样的一个纪念馆显然会是中共及中共驻外使领馆的眼中钉、肉中刺，这个是完全可以理解的，但是我们也有做相应的准备。坦率讲，如果有人来捣乱的话，我敢保证他马上会被FBI（美国联邦调查局）发现。我们跟相关单位有做一定的准备，美国政府对此也是了解的。” 记者：唐缘媛   责编：何平   网编：洪伟```0
-  ## 6/1/2023 - [又逢儿童节  中国流动人口子女状况惹关注](https://www.rfa.org/mandarin/yataibaodao/shehui/wy-06012023141816.html)
- ```今年6月1日是第73个国际儿童节。中国非政府组织"新公民计划"日前发布《2023中国流动人口子女现状》，揭示出当前中国流动人口子女的生存状况。由于父母在中国不同城市迁徙，这个庞大的未成年人群体正遭遇什么样的挑战？ 后浪：输在起跑线上的孩子"留守儿童"家庭现状：团聚少问题多 根据联合国《儿童权利公约》的定义，儿童是指18岁以下的人口。如果不看数字，常人似乎很难想象，中国流动人口的子女人数已经达到1.38亿，占了中国儿童总数的近一半（46%）。也就是说，两个中国儿童中，就有一个是流动人口的子女。“新公民计划”的最新报告《2023中国流动人口子女现状：事实和数据》对此作了详实的研究，数据来源包括国家统计局第七次全国人口普查、《2020年中国人口普查年鉴》及历次人口普查和调查数据中关于中国儿童人口的描述分析，以及中国国家统计局、联合国儿童基金会、联合国人口基金联合发布的《2020年中国儿童人口状况：事实与数据》等等。在一起！在一起？作为儿童，与父母生活在一起似乎是天经地义。但对于中国的流动人口子女来说，与父母在一起却常常是困难的。根据“新公民计划”的这份报告，2020年，有1.08亿儿童不能与父母双方共同居住在一起，其中8922万是受人口流动影响的儿童。他们中很多因此成为留守儿童，与在外地工作的父母相隔遥远。仅河南省就有留守儿童超过600万。与此同时，能随着父母一起迁徙的儿童只占流动人口子女总数的一半稍多（51.5%）。而在那些对于外来人口居住限制较多的城市，这种随迁率就更低。2020年，北京市流动人口子女的随迁率只有22.5%，上海也只有25%，广州为27.6%。还有部分流动人口的子女随着父母进城之后，因为各种原因与父母分离而返乡。2021年，中国全国就有92万进城务工随迁子女独自返乡，其中大部分成为留守儿童。北京郊区一所为农民工子女所开办的学校中的儿童（美联社资料图）不同的挑战对于留守儿童来说，他们的挑战是不能和父母在一起，在成长期缺失父母的亲情、指导和帮助。而随父母迁居异地的儿童也依然面临很多挑战。“新公民计划”2022年发布的《2022中国流动人口子女现状》曾着重分析了随迁子女就学的情况，显示其中80%能入读公办学校，20%入读民办学校。但这些随迁子女在异地入读公办学校时，常常会遭遇不公平待遇。身在纽约的非营利组织“劳工观察”创始人李强介绍说，中国随迁子女要入读本地公立学校，一般都要交一笔本地居民不必承担的赞助费，“你想想，打工的一对夫妻一年收入还不到10万元人民币，还需要加班加点，然后一个小孩上学就要赞助一、两万。”李强指出，中国针对流动人口子女歧视性的规定还体现在一些只有本地居民才能享有的财政补助上，“比如餐饮补助，和学校对低收入群体的补助，还有校车补助，有各种各样由财政支付、但外来工无法享有的补助。”目前身在荷兰的异议人士林生亮来自深圳。在这个外地务工人员大量聚集的城市，人脉甚广的林生亮常常会被人央求帮助办理外地工子女的入学资质，“我身边很多人都是这种情况，他们很痛苦。每年到孩子入学的时候，我就觉得他们像是人质被绑架一样，非常痛苦。”在林生亮看来，对于一般的外地务工人员，其子女入读公立学校的条件显得比较苛刻，“你要交社保，还要有租赁（租房）合同，你才能进公立学校读书，否则就读不了公立学校，要去私立学校就要收费，私立学校的师资等各方面条件又不够好。”深圳从至少十年前就开始实行“积分入学”的做法，对深圳户籍和符合深圳市就读条件的非深圳户籍儿童实行统一积分，根据申请儿童监护人的户籍、住房以及父母学历、职称高低等情况，进行打分排名，排名高的优先入学。这种做法似乎是为了冲破户籍与非户籍之间的屏障，但这种做法是否科学和公平，外界依然有不少质疑。据中国官媒人民网2013年报道，中国教育科学研究院研究员储朝晖认为，这种积分制实则是负向政策，在义务教育阶段对受教育对象进行分门别类的划分就是对受教育者权利的侵犯，从本质上说也是违法行为。林生亮则观察到，这种表面公平的积分制有很多猫腻，很多时候排名都是暗箱操作，积分排名不公布，这也是引发教育平权运动的原因之一，“后来很多人去搞教育平权，去搞示威游行，后来才把这种做法稍微公平一点点。”但这里的公平似乎并没有取得普遍的认可，人们仍然可以经常在社媒上看到对于流动人口子女无法得到公平教育权利的抱怨。中国非政府组织"新公民计划"日前发布《2023中国流动人口子女现状》中的中国流动人口规模图（新公民计划截图）工作也受歧视不仅上学得不到公平，这些外来务工人员的未成年子女想去工作也同样会遭到歧视。林生亮介绍说，在深圳，一半的工作没有歧视性的规定，但与政府有关联的企事业单位就会有地域性规定，比如网格员、学校的行政后勤人员、水电燃气公司等单位就只会招聘深圳本地户口的子女。李强则观察到，这种现象是全国性的，只是各地方程度不同，“比如保安类协助公务员工作的编制外工作，这种工作一般都要招收本地村镇人口的子女，外来工的子女要想找到这种工作都是很困难的。”林生亮说，无论是上学还是就业，这些针对外来务工人员子女的做法都显失公平，“纳税人人人平等，作为外来务工人员来到这座城市，作出了那么多贡献，他们也同样缴这个税。” 记者：王允   责编：何平  网编：洪伟```0
