--- a/新闻/美国之音.md
+++ b/新闻/美国之音.md
@@ -1,4 +1,6 @@
 
+  ## 6/4/2023 - [中国军舰台海拦截美舰险酿相撞事件 北京反赖美国“挑衅”](https://www.voachinese.com/a/china-defends-buzzing-american-warship-in-taiwan-strait-20230604/7122389.html)
+ ```中国国务委员兼国防部长李尚福星期天（6月4日）为中国军舰在台湾海峡以危险动作拦截一艘与加拿大护卫舰一道执行自由航行任务的美军驱逐舰的行为辩护，声称美舰在台海的行动是“霸权”和对中国的“挑衅”。```0
   ## 6/4/2023 - [六四忌日：天安门广场严密封锁，香港警方如临大敌](https://www.voachinese.com/a/china-tightens-access-to-tiananmen-square-on-anniversary-of-1989-pro-democracy-protests-20230604/7122347.html)
  ```星期天（6月4日）是1989年天安门血腥镇压事件34周年纪念日。在北京市中心的天安门广场，当局为防止民众前往表达哀悼或纪念之意，进一步强化对广场以及周边地区的封控措施。而在曾经是中国唯一一个可以公开纪念六四的城市香港，警方则挥舞国安法大棒，如临大敌般戒备和禁止民众纪念六四。```0
   ## 6/4/2023 - [拆墙运动发起人乔鑫鑫在老挝失联 疑涉中国公安跨境执法](https://www.voachinese.com/a/global-bangfw-organizer-allegedly-arrested/7122261.html)
@@ -44,5 +46,3 @@
  ```乌克兰总统泽连斯基（VolodymyrZelenskyy）在星期六（6月3日）发表的一篇媒体访谈中表示，乌克兰已经为其期待已久的大反攻做好了准备，以从俄国侵略军手中夺回属于自己的领土。“我们坚信我们一定会成功，”泽连斯基在接受华尔街日报专访时指出。```0
   ## 6/3/2023 - [美加海军执行罕见联合任务 舰船双双通过台湾海峡](https://www.voachinese.com/a/us-canadian-navies-stage-rare-joint-mission-through-taiwan-strait-20230603/7121461.html)
  ```美国海军表示，周六，一艘美国和一艘加拿大军舰驶过台湾海峡，这是在北京和华盛顿因中国宣称拥有台湾主权而紧张局势加剧之际，在敏感水道执行罕见的联合任务。```0
-  ## 6/3/2023 - [奥斯汀：不寻求冲突，但不会在欺凌和胁迫面前退缩，否认刺激中国武力攻台 ](https://www.voachinese.com/a/us-china-shangri-la-dialogue-taiwan-south-china-sea-20230603/7121408.html)
- ```美国国防部长奥斯汀6月3日在“香格里拉对话”会上发表的演讲中在强调伙伴关系对确保印太地区共同愿景的重要性时也对中国在印太地区咄咄逼人的行为表示关切。他说，美国不寻求冲突或对抗，但不会在欺凌和胁迫面前退缩。他还表示，台海冲突并不是迫在眉睫，也不是不可避免，但一旦爆发冲突将是毁灭性的。奥斯汀否认美国有意刺激中国武力攻打台湾。```0
