--- a/新闻/自由亚洲电台.md
+++ b/新闻/自由亚洲电台.md
@@ -1,4 +1,10 @@
 
+  ## 6/4/2023 - [六四34周年  蔡英文：盼中国年轻人有一天可自由歌唱](https://www.rfa.org/mandarin/Xinwen/6-06042023123845.html)
+ ```本周日是六四天安门事件34周年，台湾的总统蔡英文透过脸书分享日前发生的“贵州地铁大合唱事件”，期盼中国年轻人有一天可自由歌唱。据台湾中央社报道，近期发生的“贵州地铁大合唱事件”中，许多年轻人合唱《没有理想的人不伤心》，并高歌“我不要一直活在地下里。”蔡英文表示，这首歌曲引起广泛共鸣，正反映出中国年轻人生活在当今时代下的心情。她期盼，有一天，中国的年轻人可以自由自在地歌唱，在创作抒发的时候，只有热情，没有忧心。此外，将代表民众党角逐2024年台湾大选的该党主席柯文哲六四当天发表声明，呼吁让台湾成为中国追求民主自由的窗口。柯文哲当天启程前往日本访问，他当晚通过脸书表示，34年前，中国人民聚集在北京天安门广场上，为争取民主自由而流血；34年后的今天，中国人民仍然没有停止对民主自由的追求。他强调，普世价值、天赋人权，不应被任何人为的体制剥夺。柯文哲指出，他曾到中国多次，与当地医师们进行医学交流，医师为病人奉献的热情并无二致；不管美国、日本、台湾，甚至中国，人民对民主自由的渴望应该都是一样的。悼念34年前的今日，“让我们更勇敢的让台湾成为中国追求民主化、自由化的窗口”。责编：何平```0
+  ## 6/4/2023 - [本台驻东南亚原特约记者乔鑫鑫据报失联  引发舆论关注](https://www.rfa.org/mandarin/Xinwen/5-06042023123621.html)
+ ```本台中文部驻东南亚原特约记者乔鑫鑫近日据报与外界失联。维权网6月4日发布的消息指出，恰逢六四事件34周年之际，身在老挝的乔鑫鑫因发起拆除中国网络防火墙运动而失联，引发外界有关中国警方实施跨国抓捕的担忧。报道引述关注乔鑫鑫的网络消息披露，6月3日晚，有乔鑫鑫的朋友到其住处，发现他住处的房门已被上锁。一位老挝邻居表示，大约3天以前，来了2个老挝警察和6个中国警察。另一位朋友表示，他昨晚被人跟踪，所以不得不经常更换住处，暂时不便接受媒体采访。另有人拨打乔鑫鑫的电话，但老挝语和英语都提示“无法接通”。据介绍，乔鑫鑫今年4月曾披露，中国警方组织各省骨干网警进京与“境外网军”进行一个月的专项会战。同期，当局还责成湖南省公安厅、祁东县、镇派出所和村干部层层调查他的个人情况，并通过当地亲友关系向他施加压力。维权网指出，截至目前，乔鑫鑫是否已被抓回中国大陆尚不明晰。责编：何平```0
+  ## 6/4/2023 - [四川乐山国有林场发生山体垮塌   官方：14人遇难5人失联](https://www.rfa.org/mandarin/Xinwen/4-06042023123016.html)
+ ```据中国官方新华社6月4日引述四川省乐山市政府发布的消息，乐山市金口河区永胜乡鹿儿坪国有林场当天发生高位山体垮塌，截至15时30分，已搜救出14名遇难者遗体，有5人失联。目前当地已组织180余人和14台专业救援设备到场，搜救工作仍在持续。综合官方央视和极目新闻等媒体报道，发生事故的地方位于山区，此前也曾发生过山体滑坡。此次出现伤亡的原因，是因山体垮塌波及到该林场的一处工棚，多人被送往当地医院治疗。有金口河区人民医院工作人员表示，医院确实有从林场送来的伤者，但伤者具体情况不便透露。责编：何平```0
   ## 6/4/2023 - [美中军舰险在台海相撞  李尚福：中方“寻求对话而非对抗”](https://www.rfa.org/mandarin/Xinwen/3-06042023104507.html)
  ```据本台英语部周日发自新加坡的报道，在美中军舰险些在台海相撞仅数小时后，中国国防部长李尚福当天在“香格里拉对话会”上表示，中方“寻求对话而非对抗”。美国印太司令部在一份声明中表示，美国导弹驱逐舰“忠勋号”和加拿大皇家海军护卫舰“蒙特利尔号”6月3日通过台湾海峡的国际水域进行“例行台湾海峡过境”任务期间，一艘中国海军驱逐舰在美方军舰附近以不安全的方式转向，并从左舷约150码处超过美国军舰，而美方军舰在保持航向的同时，减速至10节避免了碰撞。声明指出，中方的行为违反在国际水域安全通行的海上规则，“所有国家的飞机和船只均可在国际法允许的任何地区飞行、航行和活动”。而中国国防部则表示，中方船只“合法和专业地”处理了上述情况。周日当天，中国国防部长李尚福在新加坡“香格里拉对话会”上表示，中国领导人习近平提出的一套所谓全球安全倡议（GSI），其特点是“对话而非对抗、伙伴而非结盟、双赢而非零和”。李尚福在演讲中明显抨击美国，指责“某些国家”“对规则和国际法采取选择性做法”，“将自己的规则强加于人”。美国和中国在许多问题上一直存在分歧，其中包括中国在南海的过度主权声索以及将美国致力于维护自由开放的印太战略及航行自由行动指责为“航行霸权”。李尚福当天在演讲中再次表示，“必须防止企图利用航行自由……作为行使航行霸权的借口。”中方此前拒绝了美国提出的有关两国防长在“香格里拉对话会”期间举行面对面会谈的要求，美国国防部长奥斯汀也就此“深表关切”。李尚福周日在演讲中还指责美国“肆意干涉别国内政”，并重申台湾问题是“中国核心利益的核心”。但李尚福也同时呼吁，美中两国应寻求共同点，“发展双边关系，深化合作”。美国国务院周六宣布，主管东亚和太平洋事务的助理国务卿康达（DanielKritenbrink）与白宫国安会主管中国与台湾事务的资深主任萨拉·贝兰（SarahBeran）将于6月4日出访中国，以“讨论双边关系中的关键问题”。责编：何平```0
   ## 6/4/2023 - [英国使馆发布《人民日报》六四头版截图    遭微博迅速删除](https://www.rfa.org/mandarin/Xinwen/2-06042023103549.html)
@@ -23,9 +29,3 @@
  ```据共同社3日消息，日美韩三国防长会谈当天在新加坡举行，就年内开始即时共享朝鲜弹道导弹相关情报达成共识。利用日韩经由美国共享情报的三国间协定，在数月内启动初期运用。为了遏制朝鲜，会谈还商定反潜和反导的三国联合训练将改为定期举行。会谈后发表了写入共识内容的联合声明。声明谴责朝鲜使用弹道导弹技术于5月31日实施的“军事侦察卫星”发射违反联合国安理会决议等，要求立即停止引起地区局势紧张的不负责的行为。考虑到中国，声明表示“也强烈反对试图凭借实力和胁迫改变现状的任何行为”，并强调了台湾海峡和平与稳定的重要性。奥斯汀在会谈中重申，美国将动用包括核在内的一切能力参与日本与韩国的防卫。（责编：梒青）```0
   ## 6/3/2023 - [仍有德国前飞行员在中国训练驾驶战机](https://www.rfa.org/mandarin/Xinwen/4-06032023112522.html)
  ```少数前德国飞行员现在可能仍然在中国提供军事训练，并为他们的教练工作赚取巨额薪水。他们的活动对德国安全官员提出了敏感问题。揭露此事件的德国镜报DERSPIEGEL称此事是可疑活动。据德国安全官员认为，这些飞行员很有可能传授了军事知识和机密的作战战术，甚至演练了进攻台湾等攻击场景。而这一切发生在中国和西方之间的紧张关系不断加剧的时候。几个月来，华盛顿和北京之间几乎没有对话交流，而且不断有紧张升级的危险。据该报称，比如上周五，中美两架战机在南海上空危险地靠近。镜报说，在最近的几届会议上，德国联邦议院的议会监督小组讨论了“公务员离职后的职业活动”。该委员会的任务是监督德国的情报机构，他们担心专业知识可能会落入坏人之手。他们关注的焦点之一是在中国的前德国联邦国防军飞行员。监督小组主席、绿党康斯坦丁·冯·诺茨(KonstantinvonNotz)表示，如果怀疑得到证实，那将是一种“令人发指、可耻和有问题的情况”，代表着“巨大的安全风险”。（责编：梒青）```0
-  ## 6/3/2023 - [中俄无视美国在联合国谴责朝鲜发射卫星的呼吁](https://www.rfa.org/mandarin/Xinwen/3-06032023111700.html)
- ```综合外电3日报道，中国和俄罗斯周五无视美国呼吁联合国安理会团结起来，共同谴责朝鲜本周试图发射卫星，反而指责华盛顿加剧了朝鲜半岛的紧张局势。美国驻联合国使团的外交官罗伯特·伍德（RobertWood）在美国和盟国组织的联合国安理会会议上发出呼吁，讨论朝鲜周三的发射卫星失败。美国称朝鲜这次失败的发射违反了多项联合国决议，因为它使用了弹道导弹技术。伍德说：“我们呼吁所有安理会成员国维护安理会的信誉，与我们一起谴责这种非法行为，并敦促朝鲜不要继续其既定的计划，进行另一次进一步威胁国际和平与安全的发射。”发射后，朝鲜领导人金正恩的妹妹金与正表示，朝鲜将很快将一颗军事间谍卫星送入轨道，并誓言平壤将提高其军事监视能力。中国常驻联合国副代表耿爽在联合国会议上表示，朝鲜有“合理的安全关切”，并表示安理会应该促进减少升级，而不是指责一方。耿爽发言后，伍德再次发言指出，“中国代表团的代表在任何时候都没有谴责朝鲜的这次太空发射。”耿爽对此回应说，有必要进行真正的对话，并且考虑到朝鲜方面的关切。联合国秘书长安东尼奥·古特雷斯（AntonioGuterres）本周表示，平壤使用弹道导弹技术的任何发射都违反了安理会决议。金与正称对朝鲜发射卫星的批评是“自相矛盾的”，因为美国和其他国家已经发射了“数千颗卫星”。（责编：梒青）```0
-  ## 6/3/2023 - [美中情局长秘密访问中国](https://www.rfa.org/mandarin/Xinwen/2-06032023111253.html)
- ```一位不愿透露姓名的美国官员2日对媒体表示，美国中央情报局（CIA）局长伯恩斯(WilliamBurns)于5月秘密访问了中国。“上个月，伯恩斯局长前往北京会见了中国同行，并强调了在情报沟通渠道中保持顺畅的重要性。”这位官员说。该官员没有提供有关会晤的更多细节。美国中央情报局并不定期公布其负责人的旅行记录。美联社援引第二位匿名消息人士的话说，伯恩斯只与情报官员会面，而没有与政治领导人会面。美国政府曾经派这位中央情报局局长进行过多次敏感的访问，包括在2021年底访问俄罗斯，讨论莫斯科准备入侵乌克兰的迹象。（责编：梒青）```0
-  ## 6/3/2023 - [美防长对中国不愿接触表示“深切关注” 北京指责美国破坏台海稳定](https://www.rfa.org/mandarin/Xinwen/1-06032023094945.html)
- ```据本台英语组报道，美国国防部长劳埃德·奥斯汀在与中国国防部长会面的呼吁遭到拒绝后，敦促中国军方领导人进行接触，称开放的沟通渠道“至关重要”。奥斯汀周六在新加坡香格里拉对话安全论坛上发表重要讲话时说，他“深感关切的是，中国一直不愿更认真地参与我们两国军队之间更好的危机管理机制。”美国国防部长在提到中国时使用的正式名称是中华人民共和国。他说，“对于负责任的国防领导人来说，合适的谈话时间是任何时候，合适的谈话时间是每次，现在是合适的谈话时间，”他并补充说“对话不是奖励。 这是必须的。”“我们谈得越多，就越能避免可能导致危机或冲突的误解和误判。”美国国防部长奥斯汀和自 2018 年以来一直受到美国制裁的中国国防部长李尚福，在周五的正式晚宴前进行了简短的握手，但没有交谈，也没有预计他们之间会举行双边会谈。“晚餐时亲切的握手不能替代实质性的参与，”奥斯汀说。美国国防部长抨击了中国，他说中国“继续对在国际领空合法飞行的美国和盟国飞机进行数量惊人的危险拦截。”就在上周，美国军方指责中国的J-16战斗机在拦截美国空军RC-135侦察机时进行了“不必要的攻击性”机动。“我们不寻求冲突或对抗，但面对欺凌或胁迫，我们不会退缩，”奥斯汀说。美国战略与国际研究中心 (CSIS) 非常驻研究员 HuongLeThu 说，两个大国之间明显的裂痕已经“成为新的现实”。HuongLeThu 告诉自由亚洲电台，无论“他们喜欢与否”，地区国家都必须接受它。“但他们可以通过促进和鼓励美中之间的对话来降低热度，从而有助于控制紧张局势，”这位研究员补充说。共同愿景菲律宾国防部高级副部长兼主管官员小卡利托·加尔维斯 (CarlitoGalvezJr.) 表示，马尼拉认为“国际法是各国之间最大的平衡器”。菲律宾于 2016 年在联合国法庭赢得了针对中国在南中国海的主张的法律诉讼，但北京迄今拒绝接受该裁决。两国最近因在南沙群岛的一些岛屿的主权问题卷入了新的争端。“俗话说，好篱笆造就好邻居，”加尔维斯说，“只有当邻国有明确的界限并尊重既定界限时，关系才会真正友好。”印度尼西亚国防部长普拉博沃·苏比安托表示，“我们必须通过对话、谈判和双赢解决方案，来克服我们的地缘政治竞争和领土争端。”“妥协是社区和社会繁荣的唯一途径，”他说，并警告说超级大国之间的竞争“已经变成了冷战”，在任何战争中，“灾难的危险总是近在咫尺。”不过，美国国防部长奥斯汀坚称，美国“不寻求新冷战”。“竞争绝不能演变成冲突。 该地区永远不应分裂为敌对集团，”他说。奥斯汀表示，华盛顿并未像中国一再声称的那样在印太地区创建、并且也不愿意创建一个新的北约。然而，奥斯汀说，美国希望建立“灵活的联盟来推进我们的共同愿景”，以使印太地区“更加稳定和更有弹性”。华盛顿将澳大利亚、日本、韩国、菲律宾和泰国列为其在该地区的“坚定盟友”，并将印度、印度尼西亚、越南和新加坡视为“重要伙伴”。在谈到自治的台湾时，奥斯汀说，美国“仍然坚定地致力于维持那里的现状，这与我们长期以来的一个中国政策一致，并履行我们在《台湾关系法》下的既定义务。”“冲突既不是迫在眉睫也不是不可避免的。 今天的威慑力很强，我们的工作就是保持这种威慑力，” 奥斯汀说。北京将台湾视为中国的一个省，并坚决抗议“外部势力”参与台湾政治。中国的中央军委联合参谋部副部长景建峰中将对美国防长奥斯汀的涉台言论进行了回击，称其“完全错误”。“世界上只有一个中国，台湾是中国领土神圣不可分割的一部分，”完成祖国统一是包括台湾同胞在内的全体中国人民的共同愿望和神圣责任。 祖国的。”中国的反击中国人民解放军军事科学院研究员赵小卓大校表示，一直试图改变台海现状的是美国。赵在香格里拉对话会上对记者说：“台湾海峡在过去十年左右的时间里非常稳定，但美国想要破坏这种稳定。”“这样他们就可以向台湾出售武器并赚很多钱，”他说。新加坡安全论坛的中国与会者反击了美国及其盟友的批评。赵大校表示，华盛顿需要改变其与他人互动方式中他所说的“错误行为”。“在对话方面，你必须照顾对方的利益，”他说，并指责美方不理解这一基本原则。另一位中国代表、来自中国国防大学国家安全学院的张驰大校质疑华盛顿在建立多边机构的同时促进东南亚集团东盟的中心地位是否自相矛盾。与此同时，该学院前副校长唐永胜少将回击加拿大国防部长安妮塔·阿南德称中国是该地区的破坏性力量。他说“中国为维护该地区的和平与稳定做出了巨大努力”。中国共产党喉舌《环球时报》周六在一篇报道中援引中国军方一名官员的话说，“中国有信心走上舞台发声。”“尽管明知香格里拉对话会是西方国家主导的攻击中国的平台，但中国还是来了，”该报称。中国国防部长李尚福将于周日，也就是论坛的最后一天，就北京的新安全举措发表重要讲话。（责编：梒青）Sat,03Jun202309:51:00-0400```0
