--- a/新闻/自由亚洲电台亚太.md
+++ b/新闻/自由亚洲电台亚太.md
@@ -1,4 +1,6 @@
 
+  ## 6/4/2023 - [六四周年港警如临大敌 多名纪念的人士被带走](https://www.rfa.org/mandarin/yataibaodao/renquanfazhi/hcm2-06042023121833.html)
+ ```六四事件34周年，向来举办悼念集会的香港维多利亚公园，今年变成亲中派主办“乡情市集”庆回归活动的场地。香港警方在维园周边加强部署，晚间传出包括社民连主席陈宝莹、记协前主席麦燕庭等多人被警方带走的消息。 天安门母亲：“永远不会忘记那个黑暗的夜晚”六四34周年台湾举办两岸三地唯一公开纪念晚会六四34周年前夕香港警方逮捕4人"六四"34周年异议人士被上岗被旅游 1989年六四事件发生后，香港维多利亚公园每年在六四这天的烛光纪念集会都是全世界最大规模的六四纪念活动。今年六四，香港连续第四年没有烛光晚会，但香港警方仍严阵以待，在六四当日派出至少五千警力，在铜锣湾和维园一带布防，晚间先后多人被捕和被带走。社民连前主席吴文远在脸书发文，晚间七点社民连主席陈宝莹，手持一朵黄色纸花和电子蜡烛，站在铜锣湾纪利佐治街，不到10秒就被警察拖进帐篷问话，随即戴上警车。根据吴文远分享陈宝莹被押上警车的照片，她手里一直高举黄色纸花，照片标记#拒绝忘记。早前傍晚6点左右，香港《集志社》报道，香港记者协会前主席麦燕庭也现身铜锣湾，并被在场警员带走。《集志社》记者现场所见，在铜锣湾地带门口梯级，警员搜查麦燕庭，双方有争论，她随后被警方带走。报道指，麦燕庭去年也在铜锣湾采访六四33周年的活动。麦燕庭担任香港记协主席25年，业界尊称为“MAK姐”，2019年麦燕庭曾随民主党创党主席、前立法会议员李柱铭等多位民主派议员赴加拿大和美国访问，并在美国国会及行政当局中国委员会听证会上作证。亲中的文汇报还把麦燕庭和其他两位记协前后任主席杨健兴、陈朗升打成“反中乱港分子”。除此之外，人称“王婆婆”的著名社运人士，下午手持鲜花，双手举起”5"和"1"手势，代表2019年示威者常叫"五大诉求，缺一不可"，在多名警员包围下，带离铜锣湾。另外，警方下午也带走多人，包括手持写有“良知"字句的女子，以及手持六四为主题的舞台剧《5月35》三语剧本，在铜锣湾默站的年轻人等。 行为艺术家三木被捕高喊“香港人不要怕、勿忘六四”香港六四前夕就已经出现零星的纪念活动，参与人士也多人被捕。3号晚间，在铜锣湾商圈附近，法新社记者目睹警察将几名行为艺术家推上警车。 香港艺术家三木3日被捕后，在铜锣湾街道高呼：“香港人不要怕，不要忘记明天是六四”。(截图自推特)晚间警方宣布，已逮捕4人，罪名是“在公共场所破坏秩序”，以及进行“具煽动意图的行为”。艺术家陈三木被捕后，在铜锣湾街道，反复高呼：“香港人不要怕他们（警察），香港人不要怕，不要忘记明天是六四”。行为艺术家陈美彤晚上也在附近一带被带上警车。香港艺术家黄国才4日现身台北自由广场出席六四晚会，并接受本台访问表示，三木在铜锣湾表演行为艺术已经超过10年，过去他也曾跟三木一起表演。在他看来，香港发生这种恐怖抓人的事很正常，因香港警已经变成一种恐怖组织表演“让你害怕”的剧码。“我的朋友三木很勇敢，他被抓时大声地叫香港人不要怕，不要忘记明天就是六月四号。我觉得他在示范给我们看，自由的秘密就是勇气。”黄国才说道。 香港艺术家黄国才现身台北六四晚会，他说三木示范自由的秘密是勇气。(记者李宗翰摄) 台大香港侨生刘家仪维园被捕台大学生团体声援与此同时，据《集志社》报道，六四难属群体“天安门母亲”的代表刘家仪和支联会义工关振邦，3日黄昏分别身穿烛光“真相”上衣，以及“896420”黑色上衣，到维园喷水池悼念。刘家仪手持六支白玫瑰、四支红玫瑰，在身上贴着写着“禁食”的A4白纸，计划在6时4分起绝食89643.4秒，悼念六四事件的死难者，并支持“天安门母亲”。随后警员以橙带封锁现场，并将两人带上警车离开。四号傍晚，台湾大学研究生协会会长许冠泽、台大学生会长孙语谦在台北的自由广场召开记者会，声援台大建筑与城乡研究所(城乡所)研究生刘家仪。许冠泽在现场分享一段刘家仪2021年在台大城乡所《城乡通讯》的谈话。“可能在这段越来越黑暗的日子，要尝试不同的方法，尽管行动是被困禁，但灵魂必须是自由的、初心也是要坚持的。总之，不要习惯政权各种‘荒谬’的手段，在自己的岗位上坚守专业的精神，每个岗位都能守住一点，起码要做到不让香港快速被消失。”许冠泽转述刘家仪受访内容。他说道，三十四年前的今日，中国政府以坦克暴力镇压天安门广场手无寸铁的学生；三十四年后的此刻，中国依然毫无长进，如今更将黑手伸进香港，逮捕手持花束与纸张的和平示威者。他推崇刘家仪不只是一位来自香港的台大研究生，更是一位将一生奉献给追求自由民主的运动者。他们会密切关注刘同学的人身处境，也呼吁台大校长能声援自己的学生，并给予必要协助。晚间台大回应表示，刘家仪是城乡所香港侨生，从2019年休学至今。六四事件是世人及各世代关心的重大历史事件，永远值得警惕。台大现正与相关单位积极联系中，希望主管机关与各界能给予刘同学支援及协助。 记者：黄春梅   责编：陈美华许书婷 申铧   网编：杰西```0
   ## 6/4/2023 - [台首映纪录片《刘晓波在福尔摩沙》悼六四](https://www.rfa.org/mandarin/yataibaodao/renquanfazhi/ec-06042023112812.html)
  ```今年是六四34周年，也是《零八宪章》发起人刘晓波在狱中病逝六周年。《刘晓波在福尔摩沙》纪录片监制谢小韫表示，于今年6月4日在台北首映该片，希望通过影片悼念六四，表达对刘晓波的怀念，同时想让更多人明白，民主自由是普世价值，呼吁中国政府平反六四和释放所有良心犯。 读者广场|【我是怎么知道六四的】来信节选刘晓波纪录片6月4日将于台北放映 一九八九年广场四君子之一和《零八宪章》发起人刘晓波，已病逝近六周年，台湾的制作人和导演，把去年中国流亡作家廖亦武、颜柯夫等人，在新北市三芝海边刘晓波雕塑前，举办刘晓波逝世五周年纪念音乐会的情况，以及大家对刘晓波的怀念，制作成纪录片，并于今年六四事件34周年的日子，于台北首映。纪录片监制、前台北市文化局长谢小韫表示，当年六四事件发生时，是全球关注的焦点，34年过去，希望借这次的机会，提醒各界刘晓波对中国民主发展所起的重要作用。谢小韫："刘晓波怎么会在福尔摩沙呢？因为他的骨灰被撒在大海里，只要有海岸的地方，就有刘晓波的灵魂。我们将借着刘晓波先生作为一个中国公共知识分子的伟大的人格，我们要把它记录下来，让很多的人来了解民主和自由，是人类的普世的价值。我们希望中国政府能够重视这个议题六四事件，最好能够平反释放所有的良心犯。" 谢小韫表示，希望借这次的机会，提醒各界刘晓波对中国民主发展的重要。(陈子非摄）廖志峰：记住刘晓波防止历史重演多名台湾的文化、艺术和学术界代表，出席纪录片的首映。纪录片顾问、允晨文化发行人廖志峰表示，大家要记住刘晓波，防止悲剧的历史重演。廖志峰："怀念刘晓波先生，同时也提醒我们不要忘记六四，他是一个时代的悲剧，这样的悲剧应该被记得、被记忆，他是一个历史的教训。革命尚未成功，我觉得还是一种提醒，我觉得这是一个极权政治，它对人性的摧残跟压迫，你如果不去提醒，它就一定会回来。我们不要忘记我们今天所享有的出版、影片观赏的自由，曾经有人付出这么多的努力，我们不应该让那个容易归零。" 廖志峰表示，大家要记住刘晓波，防止悲剧的历史重演。(陈子非摄）曾建元：台湾可借鉴其遭遇反思现况华人民主书院理事长曾建元表示，六四事件是中国专制极权的象征，刘晓波是中国民间对民主自由追求的象征，但在中国的下一代，刘晓波这个名字，无人知晓，香港现在无法再提起他的贡献，由民主的台湾，纪录刘晓波的故事。曾建元："他发起的《零八宪章》，揭示了中国的民间社会，对于追求宪政民主的理想。他正好打破和突破中国共产党编织的中国特色社会主义法治或者是人权的这套谎言。我们在这边（台湾），帮中国人记住刘晓波这个人。"曾建元表示，纪录片回忆过去，同时也反映台湾现实要面对的情况。他以台湾艺术家郑爱华为刘晓波创作的纪念雕塑，只在台北市政府展示一天就被要求送走为例，认为台湾人应该反思如何面对两岸问题。曾建元："当年的台北市市长现在选总统（编辑按：意指柯文哲），如果他在处理刘晓波的铜像，都这样投鼠忌器，那怎么去领导台湾，面对中共的种种威胁呢？这个纪录片是给台湾社会的一个拷问，让政治人物现形，就是我们台湾人面对刘晓波的问题，当我们面对的现实的政治问题，或者涉及到两岸的经济的问题的时候，我们是不是还勇于表达我们对于刘晓波的尊重。我觉得在考验台湾人的良心和道德勇气"。参与纪录片制作的艺术家颜柯夫表示，将对刘晓波的思念拍摄成纪录片，是希望起到抛砖引玉的作用，让更多人关注中国大陆的民主化状况。他还表示，刘晓波纪录片在六四首映有重大的意义，显示能够把八九民运民主自由的火种，延续下去。 记者：陈子非   责编：陈美华许书婷 申铧   网编：杰西```0
   ## 6/4/2023 - [台湾掀起#MeToo 热潮   王丹、蓝绿政治人物都被控性骚扰](https://www.rfa.org/mandarin/yataibaodao/renquanfazhi/hcm1-06042023114630.html)
@@ -27,5 +29,3 @@
  ```本周日是六四事件34周年，天安门母亲发言人尤维洁表示，当天惨况无法忘怀，坚持争取至真相大白方休。另外，《国安法》使香港不能再举办六四纪念活动，支联会的前常委和义工各自以不同的方法守护这段被变成敏感词的历史。 中共如何令十四亿人患了"六四失忆症"？【我是怎么知道六四的】来信节选 还有两天就是“六四”屠杀34周年，"天安门母亲"发言人尤维洁对本台表示，每年这段时间，她都会想起六四当天的情景。尤维洁："我是一个遇难者的亲属，我的心情一到这个时候是不会舒畅的，因为当年“六四”惨案，我所看到的，在首都北京十里长安街上，动用军队屠杀平民百姓这一举动，太令人震惊了。我在医院里头看到的各种各样的情景，依然就像发生在昨天的事情一样，历历在目，在我心里头一点一滴，我都没有忘记。"尤维洁表示，本周日是疫情后的首个六四忌日，家属们会坚持到万安公墓祭奠和发表祭文，表达对家人的哀思。她表示，"天安门母亲"发起人丁子霖和张先玲身体状况还好，但不少成员正与时间竞赛，希望能争取"真相、赔偿和问责"的三大诉求尽快实现。尤维洁："有很多的当年失去儿女的母亲、父亲们，年纪都在八十岁以上，会有一些老年病，这是我们也很担忧的一件事，我们都很希望他们能在有生之年，能看到“六四”惨案真相被公诸于世，能够得到解决，能够安慰他们非常痛苦的心。"对于今年全球多地都有六四的悼念活动，尤维洁感谢大家对“六四”惨案的关注，也感谢已解散的香港支联会，为悼念留下三十多年的烛光。支联会前副主席蔡耀昌：支联会虽解散人民不会忘记在《国安法》实施后，支联会解散，多名前常委先后被起诉，前副主席蔡耀昌也曾因为“六四”集会被判刑。他相信，他与坚持多年的支联会成员，以及无数曾举起烛光悼念的港人，都不会因为没有晚会而忘记“六四”。蔡耀昌："不会像过去三十年，每年都有大型的集会，不过，支联会从1989到2019的30年，我们至少能做到使“六四”的议题没有被消失，我相信有很多香港人都清楚知道89年的6月4日发生过什么事，相信香港人会用自己的方法，继续表达自己的看法，人民不会忘记。"对于今年“六四”期间，香港维园会变身成亲中社团举办庆回归的市集，港府高层更提早放话，警告不要利用"特别日子"做危害国家的行为。蔡耀昌认为，港府的反应过大。蔡耀昌："我当然不明白有关的社团组织为何要在“六四”前后，在维园办市集？是否有政治目的，可能要他们自己解答。我明白现在的政治环境已改变，但大多数的港人，不会想搞乱香港和危害国家安全，太多的上纲上线，对香港以至整个中国都不是好事。"蔡耀昌表示，“六四”当晚会在私人地方静默悼念，相信身陷囹圄的多名支联前骨干，也会用自己的方法，纪念这段悲痛的历史。蔡耀昌相信，六四当晚身陷囹圄的多名支联前骨干，也会用纪念这段悲痛的历史。（受訪者提供）“六四”剧本编录成书三语出版编者列明慧：尽普通人力量守护真相"六四舞台"主席列明慧选择以文字和艺术，记载六四和香港的故事。她接受本台访问表示，舞台剧《5月35日》从首演到无法公演，是香港《国安法》的历史见证。在“六四”34周年前夕，她把这齣记载时代的舞台剧本，编成广东话、国语和英语三种语言。在台湾版的剧本，希望把“六四”和香港的故事延续，在记忆与遗忘战中，尽小市民的一份力量。列明慧："有《国安法》后，很多离散的港人经常在想，我们还可以做什么？在有些事可能会被官方抹去痕迹，我们除了自己要记着之外，也要把这些历史留存下来，我们要做很多的记录，例如我们的剧本，剧本的书在香港不能出版，我们去台湾印，在香港无法演，我们去其他地方和用不同的语言去演，这些都是我们能做到的抗争方式。"列明慧表示，艺术有力量让不同地方的人了解不公义的事，不仅发生在1989年的6月4日，以及天安门母亲等难属身上。她期望三语剧本集，能使《5月35日》在全球不同地方，通过不同的语言公演，提高当地人对“六四”和香港的认识，再了解香港现在所经历的困难。" 记者：陈子非   责编：陈美华、许书婷、嘉远   网编：洪伟```0
   ## 6/2/2023 - ["六四"34周年   异议人士被上岗被旅游](https://www.rfa.org/mandarin/yataibaodao/renquanfazhi/gt-06022023021308.html)
  ```"六四"34周年前夕，中国多地实施禁止民间集会的严控措施。北京异议人士查建国、六四伤残人士齐志勇被上岗；独立媒体人高瑜被带到河南旅游；成都秋雨教会信徒被公安"维稳"；贵州人权研讨会个别成员被监控。有人形容，今年"六四"期间的维稳程度堪比中共二十大保安。 六四前夕许志永狱中呼吁　以禁食悼念"六四"【我是怎么知道六四的】来信节选 六四34周年临近，北京、湖南、四川、安徽、湖北及贵州等地异议人士、人权组织或知名维权人士，被警方上岗或者被强制旅游。据一位知情人士本周五（6月2日）告诉本台，北京独立媒体人高瑜被公安带到河南洛阳旅游：“高大姐被旅游了，在河南”。北京独立媒体人高瑜（古亭提供）贵州一位日前接到公安警告，不得接受采访的异议人士告诉本台：“贵州人权研讨会的陈西、李任科、廖双元、黄燕明以及张贾龙等人分别被警告、上岗或带到贵阳郊区农家乐和度假村。国保像往年一样，等到六四周年日结束后，才能回到贵阳家中。”这位人士还说，两天前，北京异议人士查建国、何德普、江棋生，六四伤残者齐志勇等至少十人被上岗，八九学运参与者季风则被带到贵州省桐梓县旅游。正在贵州家乡的季风对本台证实，他被旅游期间不得接受媒体采访：“所有的媒体采访我，现在都被我拒绝。因为跟我打了招呼，不让我接受采访。我说我可不可以发照片，连照片都不能发。江棋生没消息，电话打不通。这就像二十大期间，绝对不能发照片。”异议人士季风（古亭提供）合肥警方上门要带八九参与者沈良庆旅游另一位八九学运参与者，安徽合肥异议人士沈良庆告诉本台，当地公安已经通知他在六四周年日期间，须接受监控：“前几天，合肥市公安局国保支队和包河分局国保大队找我谈过话，说准备带我出去旅游，明天就要出去旅游。他们肯定会要求这几天不能谈六四话题。再有，我在旅游期间肯定是处在软禁状态。”异议人士沈良庆（古亭提供）湖南株洲多位接到公安警告的异议人士告诉本台，当局此次严控程度相当于中共二十大会议期间。其中一位陈先生说，警察周五早上刚到过他家：“他（国保）刚上我家来，才走了十分钟，因为六四这件事，说要来看守我，实施管控，可能持续到6月6日，我对此也没办法。我们这里不久前还拘留一个人叫陈思明，因为他在发推特（六四图片）。可能会被刑事拘留，因为他已被拘留四到五次了。”成都警方六四周年日与活跃人士"聚餐"在四川成都，当地异议人士宋先生告诉本台，四川环保作家谭作人，已被警方带走旅游，成都秋雨教会的多位活跃人士也被公安“打招呼”，在六四周年日当天，由警方安排“聚餐”。他说：“秋雨教会比较活跃的一些会友，这一、两天收到（国保）打招呼，我也接到电话，6月4日那一天，要被（国保）约出去吃个饭。谭作人每年六四都要被带出去旅游。”除了异议人士被监控，维权人士也被当局纳入控制范围。武汉维权人士周先生对本台说：“我们这些人虽然跟六四挂不上勾，但是现在六四异议人士该旅游的被旅游了。我们这些维权者也被国保当作所谓维稳的一部分。”每年的六四周年日，中国警方都会控制异议人士。有舆论认为，这是因为当局担心这些人士举行纪念活动或者发表相关言论，而这些活动和言论都被认为是对当局的挑战和批评。此外，中国政府一直试图掩盖、歪曲六四的真相，并禁止公民自由地表达对该事件的看法。因此，在这个敏感时期，警方会加强管控以维护政治秩序。 记者：古亭   责编：陈美华、许书婷、嘉远   网编：洪伟```0
-  ## 6/1/2023 - [六四纪念馆召开揭幕记者会 　王丹：为未来储备动力](https://www.rfa.org/mandarin/yataibaodao/renquanfazhi/tj-06012023154632.html)
- ```由1989年天安门学运领袖筹建的六四纪念馆即将于6月2日在纽约曼哈顿开馆。为此，纪念馆筹备团队在本周四召开揭幕记者会。多位六四学运领袖在会上谈及创立纪念馆的意义以及对中国民主运动的展望。 专栏：六四34周年　纽约六四纪念馆展现什么？"六四"34周年　纪念馆凝聚两代人民主抗争精神 本周四，多位1989年天安门民主运动领袖在纽约曼哈顿召开了六四纪念馆揭幕记者会，王丹、周锋锁、当年的工人运动领袖吕京花等与会出席。王丹在会上表示，六四纪念馆会在纽约设立是因为香港当局在2021年关闭了在香港的六四纪念馆：“中国当局的意图很明显，他们想掩盖历史，让世界忘记中国当局犯的罪，他们希望大家忘记共产党是建立在暴力及谎言的政权。”王丹指出，透过六四纪念馆，让世人记住1989年的天安门民主运动是件相当重要的事：“1989年是中国近代历史最重要的转折点，比较1989年之前以及过后，会发现中国是两个完全不同的国家。……六四在中国至今依旧是很敏感的话题，它代表着政治反动，我们要维持这股反对力量，并为未来储备动力。纪念六四不仅是为了我们，也是为了中国；不只是为了过去，也是为了未来。”周锋锁：纪念馆展品很多来自六四参与者周锋锁也谈到，纪念馆象征着1989年民主运动世代以及“白纸运动”年轻世代对于民主中国的渴望：“我们抱有希望，不管我们如何被打败，也无论我们还要经过什么样的难关，民主中国的梦一直都存在。我们会团结在一起，就像34年前在天安门广场一样，全世界的人都看到我们对自由中国的梦想。”周锋锁指出，纪念馆中的文物很多是来自六四运动参与者的捐赠：“长期以来，我都在援助因为六四被关押的政治犯，很多人都因为1989年的民运被中国当局起诉，所以我们组建了信息联络网，这也是为何这些展品会到我这边。这些参与者希望这些展品能被展示、保存，同时他们也希望身份能被保护。”六四纪念馆馆长于大海向本台介绍馆藏文物（记者唐缘媛摄）现场众多年轻志愿者　王丹：大家都有自由中国梦在纪念馆的会场中，有众多年轻人参与筹备工作，当中不乏有仍打算回国的中国留学生。针对有关这些青年人是受到什么样的鼓舞，才愿意冒着被中国当局秋后算帐的风险前往纪念馆帮忙的问题，王丹解释道：“我们两代人分享着一样的价值观，我们都希望中国可以变民主。很多的年轻志愿者来自‘白纸运动’世代，但我们分享着同样的梦想，这就是为什么他们参与纪念馆的活动。”推特充斥六四纪念馆假帐号　王丹：面对网军已有所准备在六四纪念馆开幕前夕，社群平台推特上出现大量六四纪念馆的虚假帐号，并试图骗取支持者捐款。王丹就此接受本台记者采访表示，他们对于中国网军的攻击、威胁已有所准备，并没有特别忧心。王丹说：“被网军骚扰和在未来可能遇到一些麻烦，这都是预料之中的。这样的一个纪念馆显然会是中共及中共驻外使领馆的眼中钉、肉中刺，这个是完全可以理解的，但是我们也有做相应的准备。坦率讲，如果有人来捣乱的话，我敢保证他马上会被FBI（美国联邦调查局）发现。我们跟相关单位有做一定的准备，美国政府对此也是了解的。” 记者：唐缘媛   责编：何平   网编：洪伟```0
