--- a/新闻/美国之音.md
+++ b/新闻/美国之音.md
@@ -1,4 +1,6 @@
 
+  ## 6/4/2023 - [香格里拉对话会：中国被质疑言行不一，美中并无兴趣真正交流](https://www.voachinese.com/a/lishangfu-shangri-la-china-hypocrisy-20230604/7122424.html)
+ ```中国国务委员兼国防部长李尚福星期天（6月4日）在香格里拉安全对话会上阐述了“中国的新安全倡议”。“开放、包容、透明、平等、法治、对话、和平和双赢”等美好的词汇充斥了李尚福的整个发言。不过，在发言结束后的答问阶段，中国能否言行一致就遭到质疑。```0
   ## 6/4/2023 - [中国军舰台海拦截美舰险酿相撞事件 北京反赖美国“挑衅”](https://www.voachinese.com/a/china-defends-buzzing-american-warship-in-taiwan-strait-20230604/7122389.html)
  ```中国国务委员兼国防部长李尚福星期天（6月4日）为中国军舰在台湾海峡以危险动作拦截一艘与加拿大护卫舰一道执行自由航行任务的美军驱逐舰的行为辩护，声称美舰在台海的行动是“霸权”和对中国的“挑衅”。```0
   ## 6/4/2023 - [六四忌日：天安门广场严密封锁，香港警方如临大敌](https://www.voachinese.com/a/china-tightens-access-to-tiananmen-square-on-anniversary-of-1989-pro-democracy-protests-20230604/7122347.html)
@@ -44,5 +46,3 @@
  ```在海外从事与中国相关的人权运动，会面对不少困难。有研究机构建议，需要去教授海外人权运动者如何筹集资金、如何营运组织、增强抵制虚假讯息的能力、以及加强对他们的精神健康的支援。```0
   ## 6/3/2023 - [泽连斯基：乌克兰已经准备好对俄军展开大反攻](https://www.voachinese.com/a/zelenskyy-says-ukraine-ready-to-launch-counteroffensive-060323/7121533.html)
  ```乌克兰总统泽连斯基（VolodymyrZelenskyy）在星期六（6月3日）发表的一篇媒体访谈中表示，乌克兰已经为其期待已久的大反攻做好了准备，以从俄国侵略军手中夺回属于自己的领土。“我们坚信我们一定会成功，”泽连斯基在接受华尔街日报专访时指出。```0
-  ## 6/3/2023 - [美加海军执行罕见联合任务 舰船双双通过台湾海峡](https://www.voachinese.com/a/us-canadian-navies-stage-rare-joint-mission-through-taiwan-strait-20230603/7121461.html)
- ```美国海军表示，周六，一艘美国和一艘加拿大军舰驶过台湾海峡，这是在北京和华盛顿因中国宣称拥有台湾主权而紧张局势加剧之际，在敏感水道执行罕见的联合任务。```0
