--- a/新闻/法国国际广播电台.md
+++ b/新闻/法国国际广播电台.md
@@ -1,4 +1,6 @@
 
+  ## 6/4/2023 - [香港警力大张下 公开悼念「六四」人数稀少 两日共扣查本台记者在内31人 拘5人](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230604-%E9%A6%99%E6%B8%AF%E8%AD%A6%E5%8A%9B%E5%A4%A7%E5%BC%A0%E4%B8%8B-%E5%85%AC%E5%BC%80%E6%82%BC%E5%BF%B5-%E5%85%AD%E5%9B%9B-%E4%BA%BA%E6%95%B0%E7%A8%80%E5%B0%91-%E4%B8%A4%E6%97%A5%E5%85%B1%E6%89%A3%E6%9F%A5%E6%9C%AC%E5%8F%B0%E8%AE%B0%E8%80%85%E5%9C%A8%E5%86%8531%E4%BA%BA-%E6%8B%985%E4%BA%BA)
+ ```今天是「六四事件」34周年，港人已是连续第四年不能到维园参与六四烛光悼念晚会，但今晚到维园及所在区域进行个人悼念的人数明显较过去三年大减，原因相信除了港府高层官员连番警告会「果断执法」外，亦可能与警方不时在场把身穿黑衣人士带走返警署调查有关，警方称共带走23人，当中包括本台在场采访的记者，而记者接触过当中半数人，均声称无故被截，有人相信，警方是要减少身穿黑色衣服人士在当区出现以及妨碍采访。```0
   ## 6/4/2023 - [台北举办纪念六四烛光晚会 民团称六四也是台湾人的事](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230604-%E5%8F%B0%E5%8C%97%E4%B8%BE%E5%8A%9E%E7%BA%AA%E5%BF%B5%E5%85%AD%E5%9B%9B%E7%83%9B%E5%85%89%E6%99%9A%E4%BC%9A-%E6%B0%91%E5%9B%A2%E7%A7%B0%E5%85%AD%E5%9B%9B%E4%B9%9F%E6%98%AF%E5%8F%B0%E6%B9%BE%E4%BA%BA%E7%9A%84%E4%BA%8B)
  ```华人民主书院协会等民团4日晚间在台北中正纪念堂前广场举办“六四34周年悼念晚会”，现场以烛光排字8964，传达悼念之意。```0
   ## 6/4/2023 - [日本与澳大利亚签安保协防式协议](https://www.rfi.fr/cn/%E4%BA%9A%E6%B4%B2/20230604-%E6%97%A5%E6%9C%AC%E4%B8%8E%E6%BE%B3%E5%A4%A7%E5%88%A9%E4%BA%9A%E7%AD%BE%E5%AE%89%E4%BF%9D%E5%8D%8F%E9%98%B2%E5%BC%8F%E5%8D%8F%E8%AE%AE)
@@ -57,5 +59,3 @@
  ```巴黎市政府举行的庆祝夏日来临的白夜活动在锣鼓声中拉开了序幕，来自华人社群的舞狮表演吸引了大量的游客以及巴黎市民，许多巴黎人携家带口来到市政府广场欣赏音乐与歌舞，就在舞狮表演的附近，十多位巴黎华人以及人权组织代表默默地举着白纸，上面写着在狱中的香港支联会组织的代表，以及被关押的中国异议分子的名字。也有人高举着坦克的图片，以及将镇压学生的政权钉在耻辱柱上的丹麦艺术家高志活（JensGalschiøt）制造的国殇之柱的复制图。```0
   ## 6/3/2023 - [纪念“六四”34周年 美国国会中国委员会发声](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E8%A6%81%E9%97%BB%E5%88%86%E6%9E%90/20230603-%E8%AE%B0%E5%BF%B5-%E5%85%AD%E5%9B%9B-34%E5%91%A8%E5%B9%B4-%E7%BE%8E%E5%9B%BD%E5%9B%BD%E4%BC%9A%E4%B8%AD%E5%9B%BD%E5%A7%94%E5%91%98%E4%BC%9A%E5%8F%91%E5%A3%B0)
  ```今天是1989年六四事件34周年。34年来，六四记念成为海外华人和国际社会的活动，而在中国大陆，六四成为禁忌话题。随着中国政治在极权之路上越走越远，香港也不能再组织公开的六四记念活动。但美国国会暨行政当局中国委员会发声记念六四，并增提彭立发等三人为2023年诺贝尔和平奖的候选人。```0
-  ## 6/3/2023 - [六四34周年：海外中国留学生接着点燃蜡烛](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E7%89%B9%E5%88%AB%E8%8A%82%E7%9B%AE/20230603-%E5%85%AD%E5%9B%9B34%E5%91%A8%E5%B9%B4-%E6%B5%B7%E5%A4%96%E4%B8%AD%E5%9B%BD%E7%95%99%E5%AD%A6%E7%94%9F%E6%8E%A5%E7%9D%80%E7%82%B9%E7%87%83%E8%9C%A1%E7%83%9B)
- ```2023年六月四日是六四天安门事件34周年的纪念日，三十四年了，在天安门惨遭屠杀的受害者究竟是多少依然是一个未知数！死难者家属天安门母亲组织的成员们也一个接一个地追随他们的死去的亲人们遗憾地离开了人世，随着北京政权的日益强硬专横，他们的亲人获得平反昭雪的这一天似乎越来越遥遥无期。不过，虽然中国官方竭尽努力试图将事件从历史上抹去，虽然中国国内的新一代人绝大多数都不知道六四意味着什么，在海外的华人却继续年复一年地举行纪念仪式。最近几年来，一些在海外的中国年轻人，虽然并没有亲身经历六四，但也逐渐加入了纪念六四的队伍，他们甚至勇敢地面对遭受北京政府打压的风险公开地站出来组织自己的纪念活动，生活在巴黎的年轻的艺术工作者蒋不就是其中之一，他向法广介绍了他为何要纪念六四。```0
