--- a/新闻/自由亚洲电台.md
+++ b/新闻/自由亚洲电台.md
@@ -10,7 +10,7 @@
   ## 6/4/2023 - [英国使馆发布《人民日报》六四头版截图    遭微博迅速删除](https://www.rfa.org/mandarin/Xinwen/2-06042023103549.html)
  ```6月4日，英国驻华使馆在其官方微博账号发布34年前，中国官方《人民日报》头版的一张截图，内容包括社论《坚决拥护党中央决策，坚决镇压反革命暴乱》，以及详细介绍医院收治大量伤亡者的文章《北京这一夜》等，但相关内容迅速被微博删除。英国驻华使馆随后通过推特表示，“在20分钟内，审查人员就删除了我们在微博上发布的贴子，来自中共党内最权威新闻机构当天的新闻报道也遭到审查。”推文表示，当时《人民日报》的编辑们显然是试图借此吸引公众对六四大屠杀的关注，但中共领导层随即对该报编辑进行了惩罚，导致时任《人民日报》总编辑被迫下台，另一名编辑也被判4年有期徒刑。英国驻华使馆指出，1989年6月4日的事件在中国仍遭到严格审查，当局甚至要删除这张党媒自己报道的图片。不管当时还是现在，中国宪法承诺的权利，公民结社、集会和言论自由等都依然受到压制。责编：何平```0
   ## 6/4/2023 - [六四34周年  台湾举办两岸三地唯一公开纪念晚会](https://www.rfa.org/mandarin/Xinwen/1-06042023101700.html)
- ```据台湾中央社6月4日报道，六四天安门事件34周年当天，台湾的华人民主书院协会等多个公民团体在中正纪念堂举行悼念活动。这也是继港区国安法实施，香港维园悼念烛光不再后，台湾成为两岸三地华人唯一能公开纪念六四事件的地区。纪念活动于当晚6点40分开始，期间有多个接力演讲，提醒公众“莫忘六四”，并呼吁各界重视中国、香港人权倒退现况，敦促全球民主力量结盟，一起抵御极权国家侵犯人权的行为。香港边城青年秘书长冯绍天表示，香港维多利亚公园烛光晚会不能再举行，取而代之的是提前庆祝香港“回归祖国”的活动。很明显，中共当局希望借此抹杀六四记忆，让人们误以为6月4日是个“庆祝”的日子。冯绍天强调，香港虽然无法举办六四悼念活动，但台湾还可以，期望台湾可以把这份精神传承下去，并且至少让港人可以线上参加。报道指出，香港维多利亚公园已连续4年无法举办悼念六四的烛光晚会活动，最后一场停留在2019年。此后当局以新冠疫情为由禁止在六四举办悼念集会，主办团体香港支联会也在2021年被迫解散。责编：何平```0
+ ```据台湾中央社6月4日报道，六四天安门事件34周年当天，台湾的华人民主书院协会等多个公民团体在中正纪念堂举行悼念活动。这也是继港区国安法实施，香港维园悼念烛光不再后，台湾成为两岸三地华人唯一能公开纪念六四事件的地区。【#六四34周年#台湾追悼晚会】【两岸三地唯一公开纪念】#六四天安门事件34周年，华人民主书院协会等公民团体6月4日晚间在中正纪念堂举行悼念活动。…pic.twitter.com/MPhgBonzES—自由亚洲电台(@RFA_Chinese)June4,2023纪念活动于当晚6点40分开始，期间有多个接力演讲，提醒公众“莫忘六四”，并呼吁各界重视中国、香港人权倒退现况，敦促全球民主力量结盟，一起抵御极权国家侵犯人权的行为。香港边城青年秘书长冯绍天表示，香港维多利亚公园烛光晚会不能再举行，取而代之的是提前庆祝香港“回归祖国”的活动。很明显，中共当局希望借此抹杀六四记忆，让人们误以为6月4日是个“庆祝”的日子。冯绍天强调，香港虽然无法举办六四悼念活动，但台湾还可以，期望台湾可以把这份精神传承下去，并且至少让港人可以线上参加。报道指出，香港维多利亚公园已连续4年无法举办悼念六四的烛光晚会活动，最后一场停留在2019年。此后当局以新冠疫情为由禁止在六四举办悼念集会，主办团体香港支联会也在2021年被迫解散。责编：何平```0
   ## 6/4/2023 - [台大学生刘家仪在港悼六四被捕 台大研究生协会声援](https://www.rfa.org/mandarin/Xinwen/st-06042023080533.html)
  ```台大研究生刘家仪在香港悼念六四天安门事件被警方逮捕，理由为“作出具煽动意图的作为”；台大研究生协会4日下午在中正纪念堂自由广场公开谴责港警，呼吁台大校方给予协助。据港媒集志社报导，六四34周年前夕，刘家仪3日身着写有“真相”上衣，以胶带交叉封口，手持6支白玫瑰、4支红玫瑰表达意见。刘家仪身上贴着“禁食”白纸，预计于下午6时4分起绝食89643.4秒，表达对六四事件悼念。但她和友人随后被警方以“涉嫌作具煽动意图行为”、“公众地方行为不检”等名义逮捕。中央社报道，台大研究生协会会长许冠泽与多名声援学生于4日在中正纪念堂自由广场公开谴责港警作为，要求台大校方给予协助。现场高喊“和平哀悼无罪、香港警方放人、立即释放刘家仪、台大校方应表态、还我香港自由”等口号。许冠泽表示，透过港媒报导可以看到，刘家仪采艺术和平方式表达意见，拿着花束的温和作法却被视作“涉嫌作具煽动意图行为”，实在是非常荒谬，台大校方应该对此表态。作为自由的台大，应该捍卫任何追求自由价值权利，必须站出来。台大学生会会长孙语谦指出，台大学生在港以和平方式表达意见，却被港警滥捕，谴责这样的行为。从这件事情也知道，中国威权不是他们家的事情，如果人们不站出来，威权会扩散；台大校方应该严正关注这件事情。责编许书婷```0
   ## 6/3/2023 - [纪念六四34周年 美国务卿发布新闻稿](https://www.rfa.org/mandarin/Xinwen/11-06032023172354.html)
