--- a/新闻/法国国际广播电台.md
+++ b/新闻/法国国际广播电台.md
@@ -1,4 +1,6 @@
 
+  ## 6/4/2023 - [六四34周年：巴黎的两场纪念会](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230604-%E5%85%AD%E5%9B%9B34%E5%91%A8%E5%B9%B4-%E5%B7%B4%E9%BB%8E%E4%BD%95%E4%BB%A5%E6%9C%89%E4%B8%A4%E5%9C%BA%E7%BA%AA%E5%BF%B5%E6%B4%BB%E5%8A%A8)
+ ```在6月3日晚间在巴黎市政府广场举行快闪举牌纪念之后，周日六月四日的当天下午，在巴黎市中心先后又出现两场纪念六四演讲会。```0
   ## 6/4/2023 - [香港警力大张下 公开悼念「六四」人数稀少 两日共扣查本台记者在内31人 拘5人](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230604-%E9%A6%99%E6%B8%AF%E8%AD%A6%E5%8A%9B%E5%A4%A7%E5%BC%A0%E4%B8%8B-%E5%85%AC%E5%BC%80%E6%82%BC%E5%BF%B5-%E5%85%AD%E5%9B%9B-%E4%BA%BA%E6%95%B0%E7%A8%80%E5%B0%91-%E4%B8%A4%E6%97%A5%E5%85%B1%E6%89%A3%E6%9F%A5%E6%9C%AC%E5%8F%B0%E8%AE%B0%E8%80%85%E5%9C%A8%E5%86%8531%E4%BA%BA-%E6%8B%985%E4%BA%BA)
  ```今天是「六四事件」34周年，港人已是连续第四年不能到维园参与六四烛光悼念晚会，但今晚到维园及所在区域进行个人悼念的人数明显较过去三年大减，原因相信除了港府高层官员连番警告会「果断执法」外，亦可能与警方不时在场把身穿黑衣人士带走返警署调查有关，警方称共带走23人，当中包括本台在场采访的记者，而记者接触过当中半数人，均声称无故被截，有人相信，警方是要减少身穿黑色衣服人士在当区出现以及妨碍采访。```0
   ## 6/4/2023 - [台北举办纪念六四烛光晚会 民团称六四也是台湾人的事](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230604-%E5%8F%B0%E5%8C%97%E4%B8%BE%E5%8A%9E%E7%BA%AA%E5%BF%B5%E5%85%AD%E5%9B%9B%E7%83%9B%E5%85%89%E6%99%9A%E4%BC%9A-%E6%B0%91%E5%9B%A2%E7%A7%B0%E5%85%AD%E5%9B%9B%E4%B9%9F%E6%98%AF%E5%8F%B0%E6%B9%BE%E4%BA%BA%E7%9A%84%E4%BA%8B)
@@ -53,8 +55,6 @@
  ```六四屠杀34周年到来之际，美国华人开展各种形式的纪念活动。在首都华盛顿、纽约、旧金山、洛杉矶等华人聚居的城市，除了像往年一样，举办烛光晚会悼念六四屠杀的死难者，今年的纪念活动，还有多处亮点，其中包括：海外第一座六四纪念馆在纽约开幕，铁链女雕像在洛杉矶自由雕塑公园落成，有大批到达美国的“走线者”积极参加各地六四纪念活动。```0
   ## 6/3/2023 - [民运人士在柏林举办“六四”34周年纪念活动](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230603-%E6%B0%91%E8%BF%90%E4%BA%BA%E5%A3%AB%E5%9C%A8%E6%9F%8F%E6%9E%97%E4%B8%BE%E5%8A%9E-%E5%85%AD%E5%9B%9B-34%E5%91%A8%E5%B9%B4%E7%BA%AA%E5%BF%B5%E6%B4%BB%E5%8A%A8)
  ```6月3日，德国首都柏林又出现了民运人士举办的六四纪念活动。在中国驻柏林大使馆门前的Jannowitz大桥上，全球支持中国和亚洲民主化论坛、民主中国阵线、中国共和党和德国中国学生学者联合会共同举办了“六四”34周年纪念活动。```0
-  ## 6/3/2023 - [彭立发、张展、李康梦获提名角逐诺贝尔和平奖](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230603-%E5%BD%AD%E7%AB%8B%E5%8F%91-%E5%BC%A0%E5%B1%95-%E6%9D%8E%E5%BA%B7%E6%A2%A6%E8%8E%B7%E6%8F%90%E5%90%8D%E8%A7%92%E9%80%90%E8%AF%BA%E8%B4%9D%E5%B0%94%E5%92%8C%E5%B9%B3%E5%A5%96)
- ```在天安门事件34周年前夕，美国国会暨行政当局中国委员会（CECC）两党领袖6月2日发表书面声明纪念天安门大屠杀事件34周年。他们还宣布增加提名北京四通桥抗议事件主彭立发、公民记者张展以及南京传媒学院学生李康梦等角三人为2023年诺贝尔和平奖候选人。因为“这些英雄的勇气应该要得到全世界的嘉奖。”```0
   ## 6/3/2023 - [巴黎白夜庆祝会上的六四纪念活动](https://www.rfi.fr/cn/%E4%BA%BA%E6%9D%83/20230603-%E5%B7%B4%E9%BB%8E%E7%99%BD%E5%A4%9C%E5%BA%86%E7%A5%9D%E4%BC%9A%E4%B8%8A%E7%9A%84%E5%85%AD%E5%9B%9B%E7%BA%AA%E5%BF%B5%E6%B4%BB%E5%8A%A8)
  ```巴黎市政府举行的庆祝夏日来临的白夜活动在锣鼓声中拉开了序幕，来自华人社群的舞狮表演吸引了大量的游客以及巴黎市民，许多巴黎人携家带口来到市政府广场欣赏音乐与歌舞，就在舞狮表演的附近，十多位巴黎华人以及人权组织代表默默地举着白纸，上面写着在狱中的香港支联会组织的代表，以及被关押的中国异议分子的名字。也有人高举着坦克的图片，以及将镇压学生的政权钉在耻辱柱上的丹麦艺术家高志活（JensGalschiøt）制造的国殇之柱的复制图。```0
   ## 6/3/2023 - [纪念“六四”34周年 美国国会中国委员会发声](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E8%A6%81%E9%97%BB%E5%88%86%E6%9E%90/20230603-%E8%AE%B0%E5%BF%B5-%E5%85%AD%E5%9B%9B-34%E5%91%A8%E5%B9%B4-%E7%BE%8E%E5%9B%BD%E5%9B%BD%E4%BC%9A%E4%B8%AD%E5%9B%BD%E5%A7%94%E5%91%98%E4%BC%9A%E5%8F%91%E5%A3%B0)
