--- a/新闻/自由亚洲电台.md
+++ b/新闻/自由亚洲电台.md
@@ -1,4 +1,10 @@
 
+  ## 6/4/2023 - [一女子在北京鸟巢挥舞美国旗、抛洒《独立宣言》 被保安控制](https://www.rfa.org/mandarin/Xinwen/9-06042023171015.html)
+ ```据维权网本周日发布的消息，六四事件34周年前夕的6月3日，北京鸟巢国家体育场五月天演唱会场外，一名女子在高处挥舞美国国旗和标语，并抛洒《独立宣言》选段。但随后，这名女子被赶来的安保人员制止。截至目前，被抓女子的后续情况不明，其个人信息也尚无人知晓。而上述事件被围观路人录制视频发布上网后迅速发酵，并被网友称为“女版彭立发（彭载舟）”事件。维权网表示，希望社会各界能对此事广为传播，以便与她的家人取得联系，并呼吁当局尽快对这名女子无罪释放。责编：何平```0
+  ## 6/4/2023 - [陆委会回应台大学生悼念六四被捕事件  呼吁港府尊重言论自由](https://www.rfa.org/mandarin/Xinwen/8-06042023165836.html)
+ ```台湾大学研究生刘家仪在香港悼念六四天安门事件被警方以“具煽动意图作为”为由拘捕后，台湾陆委会本周日作出回应。据台湾中央社6月4日报道，陆委会当天透过书面声明表示，民主自由与人权法治是台湾及全球珍视的生活方式与基本价值。香港警方带走多名悼念六四人士，呼吁香港尊重人民表意自由，期盼港府对于人民言论等人权自由应采最大包容，这对维护香港社会和谐，才是关键性的态度。陆委会强调，台湾政府相当关注留台香港学生因六四悼念活动遭到拘捕，将与教育部、台大校方就相关权益尽力提供必要协助。希望港府用公平妥适方式处理相关案件，尽速让学生回到台湾完成学业。台湾政府也会持续关注相关情势发展，适时应处。据报道，刘家仪来自香港，曾参与香港区议会选举，目前为台大城乡所学生。他长期关注香港议题，此前在台湾中兴大学历史学系完成大学学业。港媒披露，六四天安门事件34周年前夕，刘家仪于6月3日身着写有“真相”字样的上衣，以胶带交叉封口，手持6支白玫瑰、4支红玫瑰表达追悼，以表对于六四事件的悼念。但不久，刘家仪即被香港警方以“涉嫌作具煽动意图行为”、“公众地方行为不检”等罪名拘捕。责编：何平```0
+  ## 6/4/2023 - [台海、南海紧张局势升级  德国宣布明年再派军舰前往印太](https://www.rfa.org/mandarin/Xinwen/7-06042023165641.html)
+ ```据路透社6月4日报道，台海及南海紧张局势升级之际，德国国防部长鲍里斯·皮斯托留斯(BorisPistorius)周日宣布，德国将在2024年向印太地区派遣两艘战舰。根据德国国防部发布的演讲稿内容，皮斯托留斯当天在新加坡举行的“香格里拉对话会”上表示，各国需要维护以规则为基础的国际秩序和保护主要海上通道，“为此，德国联邦政府于2021年已向印太地区派遣了一艘护卫舰，并将在2024年再次向该地区部署一艘护卫舰和一艘补给船。”报道说，虽然皮斯托留斯表示上述部署并非针对任何国家，但此举显然是针对中国。据悉，出于对中国在南海主权声索野心的担忧，2021年，德国军舰近20年来首次驶入南海，此举促使柏林与其他西方国家一道扩大在印太地区的军事存在，而欧洲约有40%的对外贸易海上运输途径南海。责编：何平```0
   ## 6/4/2023 - [六四34周年  蔡英文：盼中国年轻人有一天可自由歌唱](https://www.rfa.org/mandarin/Xinwen/6-06042023123845.html)
  ```本周日是六四天安门事件34周年，台湾的总统蔡英文透过脸书分享日前发生的“贵州地铁大合唱事件”，期盼中国年轻人有一天可自由歌唱。据台湾中央社报道，近期发生的“贵州地铁大合唱事件”中，许多年轻人合唱《没有理想的人不伤心》，并高歌“我不要一直活在地下里。”蔡英文表示，这首歌曲引起广泛共鸣，正反映出中国年轻人生活在当今时代下的心情。她期盼，有一天，中国的年轻人可以自由自在地歌唱，在创作抒发的时候，只有热情，没有忧心。此外，将代表民众党角逐2024年台湾大选的该党主席柯文哲六四当天发表声明，呼吁让台湾成为中国追求民主自由的窗口。柯文哲当天启程前往日本访问，他当晚通过脸书表示，34年前，中国人民聚集在北京天安门广场上，为争取民主自由而流血；34年后的今天，中国人民仍然没有停止对民主自由的追求。他强调，普世价值、天赋人权，不应被任何人为的体制剥夺。柯文哲指出，他曾到中国多次，与当地医师们进行医学交流，医师为病人奉献的热情并无二致；不管美国、日本、台湾，甚至中国，人民对民主自由的渴望应该都是一样的。悼念34年前的今日，“让我们更勇敢的让台湾成为中国追求民主化、自由化的窗口”。责编：何平```0
   ## 6/4/2023 - [本台驻东南亚原特约记者乔鑫鑫据报失联  引发舆论关注](https://www.rfa.org/mandarin/Xinwen/5-06042023123621.html)
@@ -23,9 +29,3 @@
  ```美国国务院星期六宣布，主管东亚和太平洋事务的助理国务卿康达（DanielKritenbrink）将于6月4日至10日前往中国和新西兰访问。综合媒体3日报道，这是继美国中央情报局局长伯恩斯（WilliamBurns）上个月秘密访问北京之后，又一位主管中国事务的高层官员访华。美国国务院发表的一份声明说，白宫国安会主管中国与台湾事务的新任资深主任萨拉·贝兰（SarahBeran）也会与康达一起前往北京，与中方官员就双边关系举行会谈。美国助理国务卿康达与白宫国安会资深主任贝兰得以前往北京与中方官员举行会谈，表明北京虽然拒绝恢复两军高层交往，但是似乎并不反对两国外交和经贸官员之间的对话。据法新社的报道，康达今年二月也曾访华，为布林肯预定对北京的访问打前站，但是布林肯却因为美中气球事件而推迟或取消了访问。（责编：梒青）```0
   ## 6/3/2023 - [六四34周年前夕：CECC主席提名彭立发、张展、李康梦角逐诺贝尔和平奖](https://www.rfa.org/mandarin/Xinwen/7-06032023160525.html)
  ```美国国会及行政当局中国委员会主席克里斯·史密斯（共和党-新泽西州）和参议员杰夫·默克利（民主党-俄勒冈州），6月2日就六四34周年发表声明，宣布增加提名北京四通桥抗议事件主角彭立发、公民记者张展以及南京传媒学院学生李康梦等三人，为2023年诺贝尔和平奖候选人。声明说，“我们每年都纪念天安门悲剧，因为它太重要了，”我们向34年前的今天勇敢抗议的人们致敬，向1989年坦克驶过北京街头时牺牲的人们致敬。我们要继续铭记天安门大屠杀，绝不允许中共将其从历史书中抹去。声明提到“今天的纪念再次提醒我们永远不要将中国人民与中国共产党混为一谈。尽管一波又一波的镇压、暴行和虐待，中国人民对自由的渴望依然存在。”声明说，“在这个纪念日，我们与所有在中国和平寻求自由的人站在一起，缅怀天安门大屠杀。我们通过继续揭露中国的暴行和其他令人发指的侵犯人权行为，并追究中共官员对他们的反人类罪行的责任，来纪念这个重要的日子。由于中国有太多人无法为自己发声，我们承诺为他们辩护，支持和平促进中国人权的努力，并争取释放被任意拘留的政治犯。中国人民必须知道，自由世界永远不会忘记他们的勇气和牺牲。”（责编：梒青）```0
-  ## 6/3/2023 - [白纸运动参与者曹芷馨获颁2023年“青年中国人权奖”](https://www.rfa.org/mandarin/Xinwen/6-06032023160052.html)
- ```一年一度的“青年中国人权奖”经过投票，今年在三名候选人中选出白纸运动的参与者曹芷馨。“青年中国人权奖”评选委员会认为：曹芷馨不顾个人安危，走上街头，悼念那些因动态清零政策而惨死的同胞，勇敢地为他们发声，足以成为今后国人抗争的表率，与三十四年前的八九精神不谋而合。“青年中国人权奖”于2000年设立，由海外的一批八九学生发起，旨在支持中国境内秉持“八九”精神，为中国的民主和人权事业做出突出贡献的人士。每年“六四”纪念日左右颁布，至今已经坚持了23年。曹芷馨是中国人民大学2021届历史学硕士，被捕前是北京一家出版社的图书编辑。2022年11月27日，参与北京亮马河的悼念活动。11月29日凌晨起，与朋友一起遭到警察传唤，在片区派出所接受警察教育24小时，当时警方认定无罪并予以释放。12月18日，警察将其几位朋友以刑事拘捕的名义带走，要求他们在罪名为空白的拘捕令上签名，并拒绝向外界告知他们的关押地点。曹芷馨预感自己也会被捕，提前录下视频，向外界说明情况。12月23日被警察带走，因参与白纸运动，以“寻衅滋事”罪名被逮捕，羁押于朝阳看守所。在其失联后视频由友人发出，并公布已确认的13名失联青年的身份。2023年4月19日，曹芷馨获释。（责编：梒青）```0
-  ## 6/3/2023 - [日美韩防长同意年内开始即时共享朝鲜导弹情报](https://www.rfa.org/mandarin/Xinwen/5-06032023113639.html)
- ```据共同社3日消息，日美韩三国防长会谈当天在新加坡举行，就年内开始即时共享朝鲜弹道导弹相关情报达成共识。利用日韩经由美国共享情报的三国间协定，在数月内启动初期运用。为了遏制朝鲜，会谈还商定反潜和反导的三国联合训练将改为定期举行。会谈后发表了写入共识内容的联合声明。声明谴责朝鲜使用弹道导弹技术于5月31日实施的“军事侦察卫星”发射违反联合国安理会决议等，要求立即停止引起地区局势紧张的不负责的行为。考虑到中国，声明表示“也强烈反对试图凭借实力和胁迫改变现状的任何行为”，并强调了台湾海峡和平与稳定的重要性。奥斯汀在会谈中重申，美国将动用包括核在内的一切能力参与日本与韩国的防卫。（责编：梒青）```0
-  ## 6/3/2023 - [仍有德国前飞行员在中国训练驾驶战机](https://www.rfa.org/mandarin/Xinwen/4-06032023112522.html)
- ```少数前德国飞行员现在可能仍然在中国提供军事训练，并为他们的教练工作赚取巨额薪水。他们的活动对德国安全官员提出了敏感问题。揭露此事件的德国镜报DERSPIEGEL称此事是可疑活动。据德国安全官员认为，这些飞行员很有可能传授了军事知识和机密的作战战术，甚至演练了进攻台湾等攻击场景。而这一切发生在中国和西方之间的紧张关系不断加剧的时候。几个月来，华盛顿和北京之间几乎没有对话交流，而且不断有紧张升级的危险。据该报称，比如上周五，中美两架战机在南海上空危险地靠近。镜报说，在最近的几届会议上，德国联邦议院的议会监督小组讨论了“公务员离职后的职业活动”。该委员会的任务是监督德国的情报机构，他们担心专业知识可能会落入坏人之手。他们关注的焦点之一是在中国的前德国联邦国防军飞行员。监督小组主席、绿党康斯坦丁·冯·诺茨(KonstantinvonNotz)表示，如果怀疑得到证实，那将是一种“令人发指、可耻和有问题的情况”，代表着“巨大的安全风险”。（责编：梒青）```0
